--- a/_studies/2021-04-30-10.24998-maeusabed.876017.md
+++ b/_studies/2021-04-30-10.24998-maeusabed.876017.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Das Niveau der körperlichen Aktivität während der globalen Pandemie COVID-19 und seine Beziehung zum Wohlbefinden'
   description: 'Viele Länder haben Abriegelungsmaßnahmen ergriffen, um die Ausbreitung der neuartigen Coronaviruserkrankung 2019 (COVID-19) zu verhindern. Die Türkei ist eines dieser Länder, in denen die Menschen im Mai 2020 gezwungen waren, einen veränderten Tagesablauf zu erleben. Unser Ziel war es, das Niveau der körperlichen Aktivität und das Wohlbefinden der Menschen während des COVID-19-Ausbruchs zu ermitteln und den Zusammenhang zwischen diesen beiden Faktoren zu untersuchen. Mit Hilfe eines Online-Fragebogens wurden Daten zu beschreibenden Merkmalen und Bewegungsgewohnheiten erhoben. Personen, die sich freiwillig für die Teilnahme an der Studie gemeldet hatten, füllten den Fragebogen aus, der im Mai 2020 auf einer Online-Umfrageplattform (Google Forms) veröffentlicht wurde. Der Grad der körperlichen Aktivität wurde abgefragt und das Wohlbefinden der Personen wurde mit dem WHO-5 Well Being Index gemessen. Es wurden Spearman- und Kendall-Analysen durchgeführt. Die Umfrage wurde von 378 Erwachsenen ausgefüllt. Ungefähr drei Viertel (75,1 %) der Teilnehmer gaben an, sich nicht intensiv körperlich zu betätigen, und fast die Hälfte (48,1 %) gab an, sich nicht moderat körperlich zu betätigen. Der Wohlbefindenswert korrelierte positiv mit intensiver körperlicher Aktivität (Tage pro Woche). Unsere Ergebnisse zeigen, dass ein höheres Maß an körperlicher Aktivität mit einem verbesserten Wohlbefinden bei Erwachsenen verbunden ist. Wirksame Strategien wie regelmäßige körperliche Betätigung sollten eingesetzt werden, um die negativen Auswirkungen der Pandemie auf das Wohlbefinden und den Grad der körperlichen Aktivität zu verringern.' 
-  tags:        [körperliche Aktivität, Wohlbefinden, Bewegung]
+  tags:        [Wohlbefinden, Bewegung, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.24998/maeusabed.876017
 ---
