--- a/_studies/2021-06-03-10.3390_nu13061924.md
+++ b/_studies/2021-06-03-10.3390_nu13061924.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Ernährung während der aktuellen COVID-19-Pandemie. Ein narrativer Rückblick'
   description: 'Die Pandemie der Coronavirus-Krankheit 2019 (COVID-19) hat die Gesundheitsbehörden der Welt schockiert und eine globale Gesundheitskrise ausgelöst. In der vorliegenden Studie werden die wichtigsten ernährungswissenschaftlichen Erkenntnisse im Zusammenhang mit COVID-19 in der Literatur diskutiert. Wir führten eine kritische Konsensprüfung durch, bei der wir Primärquellen, wissenschaftliche Artikel und sekundäre bibliografische Verzeichnisse, Datenbanken und Webseiten verwendeten. Bei der Methode handelte es sich um eine narrative Literaturübersicht über die verfügbare Literatur zu Ernährungsinterventionen und ernährungsbezogenen Faktoren während der COVID-19-Pandemie. Die wichtigsten Suchmaschinen, die für die vorliegende Untersuchung verwendet wurden, waren PubMed, SciELO und Google Scholar. Wir fanden heraus, dass der COVID-19-Lockdown ungesunde Ernährungsumstellungen und eine Zunahme des Körpergewichts in der Bevölkerung förderte, wobei sich Übergewicht und geringe körperliche Aktivität als erhöhte Risikofaktoren für COVID-19-Erkrankungen und Physiopathologie erwiesen. Darüber hinaus wiesen hospitalisierte COVID-19-Patienten eine Unterernährung und einen Mangel an Vitamin C, D, B12, Selen, Eisen, Omega-3-Fettsäuren sowie mittel- und langkettigen Fettsäuren auf, was die potenzielle gesundheitliche Wirkung von Vitamin C- und D-Maßnahmen unterstreicht. Weitere Untersuchungen sind erforderlich, um die vollständige Rolle und Bedeutung der Ernährung sowohl bei der Prävention als auch bei der Behandlung von Patienten mit COVID-19 aufzuzeigen.' 
-  tags:        [COVID-19, Ernährung, Lockdown, Körperzusammensetzung, Vitamine, Ernährungsmuster, Immunologie, körperliche Aktivität, Darm]
+  tags:        [COVID-19, Ernährung, Lockdown, Körperzusammensetzung, Vitamine, Ernährungsmuster, Immunologie, Darm, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu13061924
 ---
