--- a/_studies/2021-06-30-10.3390_microorganisms9071415.md
+++ b/_studies/2021-06-30-10.3390_microorganisms9071415.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Antimikrobielle Peptide und körperliche Aktivität: Eine große Hoffnung gegen COVID 19'
   description: 'Antimikrobielle Peptide (AMPs), α- und β-Defensine, besitzen antivirale Eigenschaften. Diese AMPs erreichen die virale Hemmung durch verschiedene Wirkmechanismen. Zum Beispiel können sie: (i) direkt an Virionen binden; (ii) an Rezeptoren an der Oberfläche von Wirtszellen binden und diese modulieren, wodurch die intrazelluläre Signalübertragung gestört wird; (iii) als Chemokine fungieren, um die adaptive Immunantwort zu verstärken und zu verändern. Angesichts ihrer antiviralen Eigenschaften und der Tatsache, dass die Entwicklung einer wirksamen Behandlung der Coronavirus-Krankheit 2019 (COVID-19) eine dringende Priorität für die öffentliche Gesundheit ist, werden sie und ihre Derivate als potenzielle Therapien gegen COVID-19 erforscht. Dabei kommen verschiedene Strategien zum Einsatz, die von der direkten Interaktion mit dem Virus bis zur Verwendung als Impfstoffadjuvans reichen. AMPs wirken jedoch nicht isoliert, sondern insbesondere in ihrer Rolle als starke Immunmodulatoren, wo sie mit Toll-like-Rezeptoren (TLRs) und Chemokinrezeptoren interagieren. Diese beiden Rezeptoren spielen nachweislich eine Rolle bei der Pathogenese von COVID-19. Darüber hinaus ist bekannt, dass ein gesunder Lebensstil mit kontrollierter körperlicher Aktivität eine natürliche Waffe gegen COVID-19 darstellen kann. Bei Leistungssportlern hat sich gezeigt, dass ein Anstieg der Serumdefensine als Selbstschutz vor dem Angriff von Mikroorganismen fungiert, so dass eine kontrollierte körperliche Betätigung als Unterstützung für alle Therapien zur Bekämpfung von COVID-19 dienen könnte. Daher würde die Einbeziehung von Informationen über die Wechselwirkungen zwischen all diesen Akteuren ein vollständiges Bild der Reaktion auf AMP-basierte Therapien ergeben.' 
-  tags:        [antimikrobielles Peptid, Defensin, COVID-19, körperliche Aktivität, Cathelicidin, Chemokinrezeptor, Toll-like-Rezeptor]
+  tags:        [antimikrobielles Peptid, Defensin, COVID-19, Cathelicidin, Chemokinrezeptor, Toll-like-Rezeptor, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/microorganisms9071415
 ---
