--- a/_studies/2021-08-31-10.3390_sports9090121.md
+++ b/_studies/2021-08-31-10.3390_sports9090121.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Mögliche physiologische und zelluläre Mechanismen von Bewegung, die das Risiko schwerer Komplikationen und der Sterblichkeit nach einer SARS-CoV-2-Infektion verringern'
   description: 'Die durch das schwere akute respiratorische Syndrom Coronavirus 2 (SARS-CoV-2) verursachte Pandemie der Coronavirus-Krankheit 2019 (COVID-19) hat die Anfälligkeit der Menschheit für biologische Bedrohungen deutlich gemacht. Obwohl ein höheres Alter ein Hauptrisikofaktor für die Schwere der Erkrankung bei COVID-19 ist, hängen mehrere prädisponierende Risikofaktoren für die Sterblichkeit mit einer geringen kardiorespiratorischen und metabolischen Fitness zusammen, darunter Fettleibigkeit, Herz-Kreislauf-Erkrankungen, Diabetes und Bluthochdruck. Das Erreichen der Richtwerte für körperliche Aktivität (PA) trägt zum Schutz vor zahlreichen Immun- und Entzündungserkrankungen sowie vor Multimorbiditäten und Mortalität bei. Erhöhte kardiorespiratorische Fitness, Nicht-Übergewicht und regelmäßige körperliche Betätigung verbessern die immunologische Funktion, indem sie anhaltende systemische Entzündungen niedrigen Grades und die altersbedingte Verschlechterung des Immunsystems (Immunoseneszenz) abschwächen. Regelmäßiger PA und Nicht-Übergewicht verbessern auch die Antikörperreaktion auf Impfungen. In dieser Übersichtsarbeit werden mögliche physiologische, zelluläre und molekulare Mechanismen aufgezeigt, die durch regelmäßige PA beeinflusst werden, die antivirale Abwehr des Wirtes erhöhen und den Verlauf und das Ergebnis von COVID-19 bestimmen können. Es werden nicht nur das Immunsystem und die regelmäßige PA im Zusammenhang mit COVID-19 erörtert, sondern auch das kardiovaskuläre, respiratorische, renale und hormonelle System sowie die Skelettmuskulatur, die Epigenetik und die mitochondriale Funktion.' 
-  tags:        [Virus, Immunologie, körperliche Aktivität, Bewegung, Gesundheit, COVID-19, SARS-CoV-2, Fettleibigkeit]
+  tags:        [Virus, Immunologie, Bewegung, Gesundheit, COVID-19, SARS-CoV-2, Fettleibigkeit, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/sports9090121
 ---
