--- a/_studies/2021-09-29-10.3390_ijerph181910271.md
+++ b/_studies/2021-09-29-10.3390_ijerph181910271.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Women’s Lives Matter - Die dringende Notwendigkeit für Frauen einer optimalen körperlichen Aktivität, um das Risiko und den Schweregrad von COVID-19-Erkrankungen zu reduzieren'
   description: 'Körperliche Aktivität (PA) ist vorteilhaft für die Gesundheit und das Wohlbefinden des Einzelnen und der Gesellschaft. Während einer Pandemie mit einer Infektionskrankheit wie COVID-19 werden soziale Distanzierung, Quarantänen und Abriegelungen eingesetzt, um die Ausbreitung der Krankheit in der Gemeinschaft zu verringern. Leider erschweren solche nicht-pharmakologischen Interventionen oder Maßnahmen zur physischen Risikominderung auch die Ausübung von PA. Eine reduzierte körperliche Aktivität könnte dann physiologische Veränderungen auslösen, die sowohl die psychische als auch die physische Gesundheit beeinträchtigen. In diesem Zusammenhang ist die Wahrscheinlichkeit größer, dass Frauen unter körperlichen und psychischen Problemen leiden. PA ist eine sichere und wirksame nicht-pharmakologische Maßnahme, die bei richtiger Durchführung zur Vorbeugung und Behandlung verschiedener psychischer und physischer Gesundheitsprobleme beitragen kann. PA könnte sogar Vorteile bringen, die direkt mit der Verringerung der COVID-19-Morbidität und -Mortalität bei Frauen zusammenhängen. In dieser Übersicht fassen wir zusammen, warum eine optimale PA für Frauen während der COVID-19-Pandemie Priorität haben muss. Anschließend gehen wir auf chronische COVID-19-Erkrankungen und ihre Auswirkungen auf Frauen ein, was die Notwendigkeit weltweiter präventiver Gesundheitsstrategien unterstreicht, zu denen auch die körperliche Aktivität gehört. Abschließend erörtern wir die Bedeutung der Impfung gegen COVID-19 für Frauen als Teil der Priorisierung von Gesundheitsvorsorge und aktivem Lebensstil.' 
-  tags:        [körperliche Aktivität (PA), Bewegung, Gesundheit und Wellness, Frauengesundheit, Gesundheitsvorsorge, Impfung, Risikominderung, nicht-pharmakologische Interventionen]
+  tags:        [Bewegung, Gesundheit und Wellness, Frauengesundheit, Gesundheitsvorsorge, Impfung, Risikominderung, nicht-pharmakologische Interventionen, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/ijerph181910271
 ---
