--- a/_studies/2021-10-04-10.22551_MSJ.2021.04.10.md
+++ b/_studies/2021-10-04-10.22551_MSJ.2021.04.10.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die Auswirkungen von COVID-19 Lockdown auf das Niveau und die Intensität der körperlichen Aktivität: Eine statistische Analyse an rumänischen jungen Erwachsenen'
   description: 'Die COVID-19-Pandemie beeinträchtigt den Lebensstil von Milliarden von Bürgern, und in diesem Zusammenhang können die Maßnahmen der sozialen Distanzierung zu besorgniserregenden Veränderungen in den Bewegungsgewohnheiten führen. Die vorliegende Untersuchung zielt darauf ab, die Veränderungen in Bezug auf Sport und körperliche Aktivität unter jungen rumänischen Erwachsenen zu bewerten. Die Stichprobe umfasst 417 Befragte (die meisten der Befragten sind um die 20 Jahre alt), die den Fragebogen zwischen dem 5. und 11. März 2021 über eine Internetanwendung ausgefüllt haben. Unsere Analyse untersuchte die Häufigkeit und Dauer der körperlichen Aktivität und wie sie sich während des Lockdown aufgrund der COVID-19-Pandemie veränderte. Die Ergebnisse zeigen, dass die meisten der Befragten in den drei untersuchten Zeiträumen keine andere körperliche Aktivität mehr ausüben, außer zu Fuß zu gehen, wobei während des Lockdown ein leichter Anstieg zu verzeichnen war. Es gibt keine signifikanten Unterschiede zwischen dem Geschlecht und dem Wohngebiet. Das Regressionsmodell zeigt, dass die durchschnittliche Häufigkeit der körperlichen Aktivität nach dem Lockdown stärker variiert. Unsere Studie ergab, dass die durchschnittlichen Häufigkeiten körperlicher Aktivitäten vor, während und nach dem Lockdown mäßig korreliert sind.' 
-  tags:        [COVID-19, Lockdown, körperliche Aktivität, Rumänien, junge Erwachsene]
+  tags:        [COVID-19, Lockdown, Rumänien, junge Erwachsene, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.22551/MSJ.2021.04.10
 ---
