--- a/_studies/2021-10-20-10.3389_fpsyg.2021.759987.md
+++ b/_studies/2021-10-20-10.3389_fpsyg.2021.759987.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Psychische Gesundheit und die Rolle der körperlichen Aktivität während der COVID-19-Pandemie'
   description: 'Die COVID-19-Pandemie und die damit verbundenen Einschränkungen der öffentlichen Gesundheit haben zunehmend schwerwiegende Auswirkungen auf die psychische Gesundheit, und es müssen Maßnahmen ergriffen werden, um diesen Trend zu bremsen. Der positive Zusammenhang zwischen körperlicher Betätigung und psychischer Gesundheit ist hinlänglich bekannt, aber während der COVID-19-Pandemie sind der Raum und die Möglichkeiten für körperliche Betätigung aufgrund verschiedener Einschränkungen begrenzt. In diesem Artikel wird der Zusammenhang zwischen körperlicher Bewegung und psychischer Gesundheit während der COVID-19-Pandemie auf der Grundlage der neuesten, 2019-2021 veröffentlichten Forschungsergebnisse untersucht. Wir stellen ein neues Modell vor, das aus drei zentralen Argumenten besteht. Erstens: Körperliche Bewegung während der COVID-19-Pandemie, insbesondere angeleitete Übungen, fördern das Glücksempfinden und die psychische Gesundheit. Zweitens: Körperliche Bewegung verringert die Angst, Traurigkeit und Depression der Menschen während der COVID-19-Pandemie. Drittens hängen die Erhaltung und Verbesserung der psychischen Gesundheit mit der Intensität und Häufigkeit der körperlichen Betätigung zusammen. Intensive und häufige körperliche Betätigung ist für die Erhaltung der psychischen Gesundheit förderlich. Abschließend werden in diesem Artikel wichtige Hinweise für die künftige Forschung gegeben.' 
-  tags:        [Psychische Gesundheit, COVID-19-Pandemie, Bewältigungsverhalten, integrierter Rahmen, körperliche Aktivität]
+  tags:        [Psychische Gesundheit, COVID-19-Pandemie, Bewältigungsverhalten, integrierter Rahmen, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3389/fpsyg.2021.759987
 ---
