--- a/_studies/2021-10-26-10.1177_20420188211054686.md
+++ b/_studies/2021-10-26-10.1177_20420188211054686.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die Bedeutung von körperlicher Aktivität bei der Behandlung von Typ-2-Diabetes und COVID-19'
   description: 'Im Laufe der Zeit haben verschiedene Leitlinien die Bedeutung von körperlicher Aktivität und Bewegungstraining bei der Behandlung von Typ-2-Diabetes, chronischen Krankheiten, einschließlich Herz-Kreislauf-Erkrankungen und Erkrankungen des Bewegungsapparats, hervorgehoben. Ziel dieser Übersichtsarbeit ist, die Wirksamkeit von körperlicher Aktivität bei Menschen mit Typ-2-Diabetes und COVID-19 zu bewerten. Die meisten bisherigen Forschungsergebnisse deuten darauf hin, dass Menschen mit Typ-2-Diabetes, die sowohl Aerobic- als auch Widerstandstraining betreiben, die größte Verbesserung der Insulinsensitivität erfahren. Inzwischen ist auch bekannt, dass körperliche Aktivität aufgrund der positiven Auswirkungen von Bewegung auf das Immunsystem die Hospitalisierungsrate bei Viruserkrankungen der Atemwege, wie COVID-19, verringert. Vorläufige Ergebnisse deuten darauf hin, dass körperliche Betätigung zu Hause angesichts der aktuellen COVID-19-Pandemie und der Notwendigkeit sozialer Distanzierung ein wesentlicher Bestandteil künftiger Empfehlungen für körperliche Betätigung sein könnte. Diese häusliche körperliche Betätigung kann mit Hilfe von Schrittzählern und Aktivitätstrackern leicht reguliert und überwacht werden, so dass der Einzelne gesundheitliche Probleme, die von körperlicher Betätigung profitieren, in den Griff bekommen kann.' 
-  tags:        [COVID-19, Diabetes, Bewegung, Sport, körperliche Aktivität, Management]
+  tags:        [COVID-19, Diabetes, Bewegung, Sport, Management, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.1177/20420188211054686
 ---
