--- a/_studies/2021-11-12-10.3390_ijerph182211882.md
+++ b/_studies/2021-11-12-10.3390_ijerph182211882.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen von Heimarbeit auf die kardiovaskuläre Gesundheit: Ein neues Problem im Zusammenhang mit der COVID-19-Pandemie'
   description: 'Die obligatorische Arbeit von zu Hause aus ist eine der Folgen der COVID-19-Pandemie für eine große Zahl von Arbeitnehmern. Der Übergang zur Arbeit von zu Hause aus kann den Lebensstil, den psychosozialen Status und die allgemeine Gesundheit der Arbeitnehmer erheblich beeinflussen. Diese Übersicht fasst die verfügbaren Daten über die Auswirkungen von Schließungsmaßnahmen, insbesondere der Heimarbeit, auf kardiovaskuläre Risikofaktoren wie Bewegungsmangel, ungesunde Ernährung, psychische Belastung, Rauchen, Alkoholmissbrauch und kardiometabolische Parameter zusammen. Schließlich schlagen wir Gegenmaßnahmen vor, die die negativen gesundheitlichen Auswirkungen der Heimarbeit abschwächen können. Rechtzeitige und maßgeschneiderte Maßnahmen, die von den Unternehmen in Zusammenarbeit mit dem Gesundheitssystem durchgeführt werden, könnten es den Arbeitnehmern ermöglichen, einige der mit der Heimarbeit verbundenen Vorteile stärker zu nutzen.' 
-  tags:        [COVID-19-Pandemie, Heimarbeit, Lebensstil, sitzende Tätigkeit, körperliche Aktivität, Ernährungsmuster, Herz-Kreislauf-Erkrankungen]
+  tags:        [COVID-19-Pandemie, Heimarbeit, Lebensstil, sitzende Tätigkeit, Ernährungsmuster, Herz-Kreislauf-Erkrankungen, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/ijerph182211882
 ---
