--- a/_studies/2021-12-27-10.1016_j.maturitas.2021.12.009.md
+++ b/_studies/2021-12-27-10.1016_j.maturitas.2021.12.009.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Beschleunigte Alterung bei der COVID-19-Pandemie: Ein Dilemma für gesundes Altern'
   description: 'Weltweit kommt es zu einer Verschiebung der Bevölkerungsverteilung in den Ländern hin zu einem höheren Lebensalter, der Bevölkerungsalterung. Gleichzeitig nehmen das beschleunigte Altern und altersbedingte Krankheiten zu, was vielfältige Auswirkungen auf die Gesellschaft hat. Als Reaktion darauf bemüht sich die Weltgesundheitsorganisation gemeinsam mit anderen Akteuren um die Förderung eines gesunden Alterns weltweit. [1] Die derzeitige Pandemie der Coronavirus-Krankheit 2019 (COVID-19) hat jedoch mehrere Herausforderungen für die Verwirklichung des gesunden Alterns mit sich gebracht: Die Alterung der Bevölkerung ist ein wichtiger treibender Faktor, da die Krankheit eine unverhältnismäßige Bedrohung für ältere Erwachsene darstellt und folglich Orte mit einer schneller alternden Bevölkerung stärker betroffen sind; beschleunigtes Altern, unabhängig vom chronologischen Alter, ist mit dem Schweregrad von COVID-19 verbunden; und COVID-19 ist direkt und indirekt (d. h., COVID-19 schafft direkt und indirekt (d. h. u. a. durch soziale Distanzierung, Quarantäne- und Abriegelungsmaßnahmen) Hindernisse für ein gesundes Altern, indem es u. a. das Engagement für gesunde Lebens- und Verhaltensweisen einschränkt und die soziale Isolation verstärkt. Insgesamt kann dies die gesellschaftlichen Ziele des gesunden Alterns gefährden. Um ein gesundes Altern zu erreichen, insbesondere während dieser und potenzieller künftiger Pandemien, sind innovative Forschung im Bereich der öffentlichen Gesundheit und forschungsbasierte Lösungen erforderlich.' 
-  tags:        [COVID-19, gesundes Altern, Bevölkerungsalterung, beschleunigte Alterung, soziale Isolation, Ernährung, körperliche Aktivität, Informations- und Kommunikationstechnologien]
+  tags:        [COVID-19, gesundes Altern, Bevölkerungsalterung, beschleunigte Alterung, soziale Isolation, Ernährung, Informations- und Kommunikationstechnologien, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1016/j.maturitas.2021.12.009
 ---
