--- a/_studies/2021-12-28-10.3390_ijerph19010302.md
+++ b/_studies/2021-12-28-10.3390_ijerph19010302.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Veränderungen der Stressbewältigung, des Alkoholkonsums, des Zigarettenrauchens und der körperlichen Aktivität während einer COVID-19-bedingten Schließung bei Medizinstudenten in Polen'
   description: 'Die anhaltende COVID-19-Pandemie hat die sozialen Kontakte erheblich eingeschränkt und damit zur Vertiefung der Isolation beigetragen. Daher hat SARS-CoV-2 nicht nur physische, sondern auch psychische Auswirkungen auf die Menschen, die sich häufig gestresst fühlen. Zu den langfristigen Auswirkungen eines solchen Zustands könnte auch die Bewältigung von Depressionen gehören. In unserer Studie wurden daher Gruppen von Medizinstudenten in verschiedenen Phasen der Pandemie (zu Beginn der Pandemie, nach einem halben Jahr der Pandemie und nach einem Jahr der Pandemie) untersucht, um die Auswirkungen dieser Situation auf die Stressbewältigung zu bewerten. Die Auswirkungen der Pandemie auf die Entwicklung von Stressfaktoren wie Alkoholkonsum und Rauchen wurden ebenfalls untersucht. Das Ausmaß der körperlichen Aktivität im Zusammenhang mit der Bewältigung einer unsicheren Situation wurde ebenfalls bewertet. Die Auswirkungen der oben genannten Faktoren auf das Verhalten der Studenten wurden mit dem Mini-COPE-Fragebogen, dem AUDIT-Test, dem Fagerström-Test und dem IPAQ-Fragebogen analysiert. Es hat sich gezeigt, dass die Patienten im Verlauf der Pandemie und der Lockdowns häufiger oder größere Mengen Alkohol konsumierten, mehr Zigaretten rauchten und sich weniger körperlich betätigten. All diese Faktoren könnten einen gewissen Einfluss auf die Verschlechterung der Stressbewältigung bei den Befragten gehabt haben, was darauf hindeuten würde, dass die COVID-19-Pandemie erheblich zu einem Anstieg des Stressempfindens bei den Studenten beigetragen hat.' 
-  tags:        [Alkohol, COVID-19, Distress, körperliche Aktivität, Rauchen]
+  tags:        [Alkohol, COVID-19, Distress, Rauchen, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.3390/ijerph19010302
 ---
