--- a/_studies/2021-12-31-123456789_7100.md
+++ b/_studies/2021-12-31-123456789_7100.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Das körperliche Aktivitätsniveau der Studierenden und wie es ihre geistige Gesundheit und akademische Leistung während der Covid-19-Pandemie beeinflusst'
   description: 'Mehrere Berichte weisen darauf hin, dass sich eine erhöhte körperliche Aktivität positiv auf die geistige Gesundheit auswirkt. Einige Daten deuten darauf hin, dass diese beiden Faktoren mit besseren schulischen Leistungen in Verbindung gebracht werden können. Die Neuheit der Studie besteht darin, diese Zusammenhänge während der Covid-19-Pandemie unter Medizin- und Zahnmedizinstudenten in Lettland zu untersuchen. Ziel - Untersuchung eines möglichen Zusammenhangs zwischen dem Grad der körperlichen Betätigung von Studenten, ihren akademischen Leistungen und ihrem psychischen Gesundheitszustand Methoden - Ein Fragebogen wurde Studenten angeboten, die in Lettland Medizin oder Zahnmedizin studieren. Der Fragebogen erfasste Alter, Geschlecht, Semester/Jahr des Studiums, Umfang der körperlichen Aktivität, Umfang der sitzenden Tätigkeit, Durchschnittsnote, Anzahl der nicht bestandenen Kurse/Semester, Fragen zur psychischen Gesundheit und zum sozialen Unterstützungssystem. Die gesammelten Daten wurden mit der Software IBM SPSS Statistics 26 ausgewertet: deskriptive Methoden, einschließlich Chi-Quadrat-Analyse. Ergebnisse - 70 Teilnehmer wurden in die Studie aufgenommen: zwei Drittel waren weibliche Studenten und ein Drittel männliche Studenten. 97,1% (n=68) der Studenten waren von der Rīga Stradiņš Universität und 2,9% (n=2) von der lettischen Universität. 98% (n=69) studierten Medizin und 1,4% (n=1) Zahnmedizin. 60 % (n=42) waren körperlich sehr aktiv, 37,1 % (n=26) mittel aktiv und 2,9 % (n=2) fielen in die Gruppe mit geringer Aktivität. Die Ergebnisse zeigen, dass ~7% der Teilnehmer eine geringe soziale Unterstützung haben. Die körperlich hoch aktiven und die weniger aktiven Studenten wiesen einen ähnlichen psychischen Gesundheitszustand und ein ähnliches akademisches Leistungsniveau auf, da kein statistisch signifikanter Unterschied zwischen den Gruppen festgestellt wurde. Schlussfolgerungen - Ein Zusammenhang zwischen erhöhter körperlicher Aktivität, verbesserten akademischen Leistungen und besserer psychischer Gesundheit konnte in diesem Studienumfeld nicht nachgewiesen werden. Zu diesem Thema sollten weitere Untersuchungen mit einer größeren Anzahl von Teilnehmern durchgeführt werden.' 
-  tags:        [körperliche Aktivität, geistige Gesundheit, akademische Leistung, körperliche Aktivität, geistige Gesundheit, akademische Leistung]
+  tags:        [geistige Gesundheit, akademische Leistung, geistige Gesundheit, akademische Leistung, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://dspace.rsu.lv/jspui/handle/123456789/7100
 ---
