--- a/_studies/2022-01-01-10.26773-jaspe.220104.md
+++ b/_studies/2022-01-01-10.26773-jaspe.220104.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Geschlechtsspezifische Unterschiede in der körperlichen Aktivität, der körperlichen Fitness und dem Wohlbefinden von Schülern während des Lockdown aufgrund der COVID-19-Pandemie'
   description: 'Die Bewegungseinschränkungen für die Bevölkerung und die Auswirkungen der Präventivmaßnahmen aufgrund der COVID-19-Pandemie haben das Forschungsinteresse an der Analyse des gesunden Lebensstils der studentischen Bevölkerung geweckt. Ziel der Studie war es, die geschlechtsspezifischen Unterschiede zwischen Studenten in Bezug auf körperliche Aktivität und die Wahrnehmung der körperlichen Fitness und des Wohlbefindens während des Lockdowns aufgrund von COVID-19 zu untersuchen. Die Stichprobe bestand aus männlichen (n=268; 25,9%; Alter 22,56±2,12) und weiblichen Studenten (n=768; 74,1%; Alter 22,12±1,73) der Universität von Sarajevo (UNSA). Der Fragebogen enthielt Fragen und Skalen zur Messung von körperlicher Aktivität, körperlicher Fitness und der akuten Auswirkungen auf das Wohlbefinden. Der χ²-Unabhängigkeitstest wurde verwendet, um geschlechtsspezifische Unterschiede festzustellen (p<0,05). Vor der Erklärung des COVID-19 gab es einen signifikanten Unterschied im Niveau der regelmäßigen körperlichen Aktivität zwischen männlichen und weiblichen Studenten an der UNSA. Die Daten zeigten, dass zu diesem Zeitpunkt 65 % der männlichen Studenten regelmäßig körperlich aktiv waren, während 45 % der weiblichen Studenten regelmäßig körperlich aktiv waren. Während der Schließungsmaßnahmen an der UNSA: 46 % der männlichen und 40 % der weiblichen Studenten gaben an, regelmäßig körperlich aktiv zu sein, und es wurden keine signifikanten Unterschiede in Bezug auf das Geschlecht festgestellt; 65 % der männlichen und 58 % der weiblichen Studenten berichteten über eine Abnahme der körperlichen Fitness, und es wurden signifikante Unterschiede zwischen den Geschlechtern festgestellt. Nach dem Training berichteten 62-79 % der männlichen Studenten von besserer Konzentration und Stimmung, mehr Energie und Motivation und weniger Nervosität, während 62-81 % der weiblichen Studenten von besserer Konzentration und Stimmung, mehr Energie und Motivation und weniger Nervosität berichteten. Bei den akuten Auswirkungen körperlicher Aktivität auf das Wohlbefinden der Schüler wurden keine signifikanten Unterschiede zwischen den Geschlechtern festgestellt. Obwohl die geschlechtsspezifischen Unterschiede in der körperlichen Aktivität während der frühen Phase der COVID-19- und Lockdown-Maßnahmen verschwanden, war bei den weiblichen Studierenden ein deutlicherer Rückgang der körperlichen Fitness zu verzeichnen. Die angegebene körperliche Aktivität hatte ebenfalls positive akute Auswirkungen auf das Wohlbefinden der Schüler.' 
-  tags:        [Lockdown, aktiver Lebensstil, körperliche Aktivität]
+  tags:        [Lockdown, aktiver Lebensstil, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.26773/jaspe.220104
 ---
