--- a/_studies/2022-01-10-10.1016_j.jvn.2022.01.001.md
+++ b/_studies/2022-01-10-10.1016_j.jvn.2022.01.001.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen der COVID-19-Pandemie auf den Gesundheitslebensstil von Patienten mit peripherer Arterienerkrankung: Eine Querschnittsstudie'
   description: 'Soziale Isolation war eine der wichtigsten Strategien zur Verhinderung der Verbreitung des Coronavirus 2019 (COVID-19). Die Auswirkungen der sozialen Isolation auf den Lebensstil von Patienten mit peripherer arterieller Verschlusskrankheit (PAD) und Claudicatio-Symptomen sind jedoch nach wie vor unklar. Es sollte untersucht werden, wie Patienten mit pAVK die Auswirkungen der durch die COVID-19-Pandemie hervorgerufenen sozialen Isolation auf ihren Lebensstil wahrnehmen. Die von unserer Gruppe entwickelte Studiendatenbank umfasste Patienten mit pAVK aus öffentlichen Krankenhäusern in São Paulo. In diese Querschnittsstudie wurden 136 Patienten mit pAVK (61 % Männer, 68±9 Jahre alt, 0,55±0,17 Knöchel-Brachial-Index, 82,4 % mit einer pAVK-Diagnose ≥5 Jahre alt) aufgenommen. Die Faktoren des gesundheitlichen Lebensstils wurden in einem Telefoninterview anhand eines Fragebogens ermittelt, der Fragen zu folgenden Aspekten enthielt: (a) COVID-19 Körperpflege; (b) psychische Gesundheit; (c) gesundheitliche Risikogewohnheiten; (d) Essverhalten; (e) Lebensstil; (f) körperliche Aktivität; (g) allgemeine Gesundheit; und (h) Gesundheitsvorsorge bei peripherer Arterienerkrankung. Die Mehrheit der Patienten gab an, während der COVID-19-Pandemie mehr Zeit vor dem Fernseher und im Sitzen zu verbringen, und nur 28,7 % trieben Sport. Angst und Unzufriedenheit waren die häufigsten Gefühle, über die die Patienten selbst berichteten, und 43,4 % berichteten über einen Rückgang der Gehfähigkeit. Die meisten Patienten mit pAVK gaben an, während der COVID-19-Pandemie vermehrt zu sitzen, sich weniger zu bewegen und sich körperlich und geistig schlechter zu fühlen. Daher ist es notwendig, Strategien zur Verbesserung der Lebensqualität dieser Patienten in dieser Zeit zu entwickeln.' 
-  tags:        [COVID-19, soziale Isolation, periphere Arterienerkrankung, körperliche Aktivität, psychische Gesundheit]
+  tags:        [COVID-19, soziale Isolation, periphere Arterienerkrankung, psychische Gesundheit, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1016/j.jvn.2022.01.001
 ---
