--- a/_studies/2022-01-12-10.1093_eurpub_ckac003.md
+++ b/_studies/2022-01-12-10.1093_eurpub_ckac003.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Unterschätzen wir die Auswirkungen von COVID-19 auf die körperliche Aktivität von Kindern in Europa? - eine Studie mit 24.302 Kindern'
   description: 'Diese wiederholte Querschnittsstudie untersuchte die Auswirkungen der Sperre in Europa im Winter (Januar-Februar 2021) auf die körperliche Aktivität (PA) und die Bildschirmzeit in der Freizeit von Kindern und Jugendlichen und verglich die PA mit der Sperre im Frühjahr 2020. Es wurde eine Online-Umfrage in neun Ländern durchgeführt (n = 24 302; 6-18 Jahre; 51,7 % Jungen). PA und RST wurden mittels 7-Tage-Erinnerung bewertet. 9,3 % der Kinder erfüllten die PA-Empfehlung der WHO, was der Hälfte des im Frühjahr 2020 beobachteten Anteils entsprach (19,0 %). Sechzig Prozent übertrafen die RST-Empfehlungen. Dies deutet darauf hin, dass die Schließung im Winter einen negativeren Einfluss auf die PA haben könnte als im Frühjahr.' 
-  tags:        [Kinder, COVID-19, körperliche Aktivität, Bildschirmzeit, Europa]
+  tags:        [Kinder, COVID-19, Bildschirmzeit, Europa, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1093/eurpub/ckac003
 ---
