--- a/_studies/2022-01-13-10.1007_s11469-021-00722-9.md
+++ b/_studies/2022-01-13-10.1007_s11469-021-00722-9.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Eine latente Clusteralyse des Schweregrads der psychischen Gesundheit und des Alkoholkonsums: Assoziationen mit COVID-19-bezogenem Quarantäneverhalten, Isolation, Selbstmordgedanken und körperlicher Aktivität'
   description: 'Die vorliegende Studie untersuchte latente Klassen-Cluster-Gruppenmuster auf der Grundlage von Messungen des Schweregrads von Depressionen und Angstsymptomen sowie des Alkoholkonsums während der COVID-19-Pandemie. Untersucht wurden hypothetische Korrelate mit Latent-Class-Cluster-Gruppen, darunter Quarantäne, Selbstisolation, Suizidgedanken, Sitzstunden pro Tag und körperliche Aktivität (intensive Bewegung in Minuten pro Woche). Die eingeschränkte Teilnehmerstichprobe bestand aus 606 jungen Erwachsenen im Alter von 18 bis 25 Jahren (M = 21,24 ± 1,62). Die latente Clusteranalyse (LCA) modellierte Muster der Schwere von Depressions- und Angstsymptomen und des Alkoholkonsums während der COVID-19-Pandemie. Die Analyse zwischen den Gruppen und die multinomiale logistische Regressionsanalyse wurden verwendet, um die Beziehungen zwischen latenten Klassenclustern und Korrelaten wie Quarantäne, Selbstisolation, Suizidgedanken, Sitzstunden pro Tag und körperliche Aktivität (Intensität der körperlichen Betätigung in Minuten pro Woche) zu untersuchen. Die LCA-Ergebnisse zeigten, dass sechs latente Clustergruppen eine optimale Anpassung des Modells an den Schweregrad der psychischen Gesundheitssymptome und den Alkoholkonsum boten. Es wurden folgende latente Klassencluster identifiziert: Cluster eins = mäßiger Schweregrad von Angst und Depression und mäßiger Alkoholkonsum (n = 156; 25,7 %); Cluster zwei = hoher Schweregrad der psychischen Gesundheit und Alkoholkonsum (n = 133; 21,9 %); Cluster drei = geringe psychische Gesundheitssymptome und mäßiger Alkoholkonsum (n = 105; 17. 3%); Cluster vier = niedrigster Schweregrad der psychischen Gesundheit und Alkoholkonsum (n = 95; 15,7%); Cluster fünf = mittlerer Schweregrad der Depression, niedriger Schweregrad der Angst und niedriger Alkoholkonsum (n = 74; 12,2%); und Cluster sechs = mittlerer Schweregrad der Angst, niedriger Schweregrad der Depression und niedriger Alkoholkonsum (n = 43; 7,1%). Die Ergebnisse der multinomialen logistischen Regressionsanalyse zeigten, dass Quarantäne, Selbstisolation, Suizidgedanken, sitzendes Verhalten und körperliche Aktivität in unterschiedlichem Maße mit der Zugehörigkeit zu einer Gruppe assoziiert waren. Die Ergebnisse dieser Studie zeigen Zusammenhänge zwischen COVID-19-Beschränkungen im Bereich der öffentlichen Gesundheit, Suizidgedanken und einer Verschlechterung der psychischen Gesundheit sowie einer Zunahme des Alkoholkonsums bei jungen erwachsenen Universitätsstudenten.' 
-  tags:        [COVID-19, psychische Gesundheit, Depression, Angst, Alkoholkonsum, Quarantäne, Suizidalität, körperliche Aktivität]
+  tags:        [COVID-19, psychische Gesundheit, Depression, Angst, Alkoholkonsum, Quarantäne, Suizidalität, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1007/s11469-021-00722-9
 ---
