--- a/_studies/2022-01-14-10.1017_S1473550421000409.md
+++ b/_studies/2022-01-14-10.1017_S1473550421000409.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die Auswirkungen der COVID-19-Lockdowns auf die menschliche Psychologie und körperliche Aktivität; eine raumanaloge Forschungsperspektive'
   description: 'Astronauten werden bei künftigen Missionen isolierten, eingeschränkten und extremen Bedingungen ausgesetzt sein und müssen in der Lage sein, sich daran anzupassen. Bis vor kurzem konnten jedoch nur wenige Orte auf der Erde als akzeptable Weltraumanaloga dienen (d. h. Unterwasser- und Polarregionen). Die mit der Coronavirus-Krankheit 2019 (COVID-19) zusammenhängenden Abriegelungen rund um den Globus boten eine gute Gelegenheit, umfassendere Daten über die Auswirkungen einer längeren Isolation auf die menschlichen Funktionen in einer sehr großen Stichprobe zu erhalten. Siebenhundertachtundvierzig Personen (Belgien 442, Spanien 183, Deutschland 50, Italien 50, USA 23; Durchschnittsalter ± SD: 41 ± 14 Jahre, mit einer Altersspanne von 18-83 Jahren; 66 % Frauen) füllten eine Online-Umfrage aus, in der die Auswirkungen der COVID-Absperrung auf psychologische, sportliche und allgemeine Gesundheitsvariablen bewertet wurden, und zwar ein erstes Mal zu Beginn der ersten Absperrung (im Folgenden "T1"; 24 ± 13 Tage nach Beginn der ersten Absperrung; d. h., 3 Wochen nach Beginn des ersten Lockdowns) und ein zweites Mal einige Wochen danach (im Folgenden "T2"; 17 ± 5 Tage nach der ersten Online-Befragung; d. h. 6 Wochen nach Beginn des ersten Lockdowns). Von T1 bis T2 wurde eine Verbesserung der subjektiven Schlafqualität beobachtet, die mit einer Zunahme der subjektiven Schlafeffizienz und einer Abnahme der Schlaflatenz und der Schlafstörung zusammenhing. Die wöchentliche Sitzzeit verringerte sich, und die wöchentliche Menge an mäßiger und intensiver körperlicher Aktivität nahm von T1 zu T2 zu. In Bezug auf Stimmung, Einsamkeit und Angstzustände wurden keine Unterschiede zwischen T1 und T2 festgestellt. Eine geringere Sitzdauer korrelierte signifikant mit einer verbesserten subjektiven Schlafqualität und einem erhöhten Maß an moderater und intensiver körperlicher Aktivität. Im Vergleich zu drei Wochen nach der ersten COVID-auferlegten Sperre wurden sechs Wochen nach Beginn der ersten COVID-auferlegten Sperre die Werte für körperliche Aktivität und subjektiven Schlaf positiv beeinflusst. Die vorliegende Studie mit einer großen Stichprobe bestätigt erneut, dass körperliche Betätigung eine lohnende Gegenmaßnahme zur psychophysiologischen Dekonditionierung während der Haft ist.' 
-  tags:        [COVID-19, isolierte und eingeschränkte Umgebung, Einsperren, körperliche Aktivität, Schlaf, Raumanalogie]
+  tags:        [COVID-19, isolierte und eingeschränkte Umgebung, Einsperren, Schlaf, Raumanalogie, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1017/S1473550421000409
 ---
