--- a/_studies/2022-01-14-10.3390_nu14020350.md
+++ b/_studies/2022-01-14-10.3390_nu14020350.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Assoziationen von Ernährungsverhalten und Darmmikrobiota mit dem Risiko von COVID-19 bei gesunden jungen Erwachsenen in Polen'
   description: 'Die zahlreichen Folgen der Coronavirus-Pandemie 2019 (COVID-19) bei gesunden jungen Menschen und die Unklarheit über die langfristigen Krankheitsfolgen haben die Suche nach Risikofaktoren für eine SARS-CoV-2-Infektion vorangetrieben. Unser Ziel war es, die Zusammenhänge zwischen Ernährungsverhalten, Darmmikrobiota und körperlicher Aktivität und dem Risiko einer COVID-19-Infektion bei gesunden jungen, nicht adipösen Menschen zu untersuchen. Von 95 Erwachsenen (Durchschnittsalter 34,66 ± 5,76 Jahre) wurden Daten über die Körperzusammensetzung, anthropometrische Messungen, körperliche Aktivität, Nahrungsaufnahme und Darmmikrobiota erhoben. Eine ausgewogene Ernährung, die reich an Gemüse und Obst, einschließlich Nüssen, Vollkorngetreideprodukten und Hülsenfrüchten ist, deckt den Bedarf an Vitaminen und Mineralstoffen. Eine solche Ernährung kann eine wirksame Maßnahme zur Verringerung des COVID-19-Risikos bei nicht übergewichtigen, gesunden, körperlich aktiven jungen Menschen mit normaler Immunfunktion sein. Personen mit einer ausgewogenen Ernährung und einem durchschnittlichen täglichen Verzehr von mehr als 500 g Gemüse und Obst und mehr als 10 g Nüssen hatten ein um 86 % geringeres Risiko für COVID-19 als Personen, die sich nicht ausgewogen ernährten und weniger dieser Produkte zu sich nahmen. Es ist gut dokumentiert, dass eine richtige Ernährung, körperliche Aktivität und die Aufrechterhaltung eines normalen Gewichts die Gesundheit fördern, indem sie eine optimale Immunfunktion gewährleisten. Die positiven Auswirkungen dieser Maßnahmen sollten während der COVID-19-Pandemie besonders hervorgehoben werden.' 
-  tags:        [COVID-19, Pandemie, Nahrungsaufnahme, ernährungsbedingter Entzündungsindex, Darmmikrobiota, Ernährung, körperliche Aktivität]
+  tags:        [COVID-19, Pandemie, Nahrungsaufnahme, ernährungsbedingter Entzündungsindex, Darmmikrobiota, Ernährung, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu14020350
 ---
