--- a/_studies/2022-01-15-10.31234_osf.io_y2b4k .md
+++ b/_studies/2022-01-15-10.31234_osf.io_y2b4k .md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Zusammenhänge zwischen körperlicher Aktivität, Schwierigkeiten bei der Affektregulierung und psychischer Gesundheit bei kanadischen Jugendlichen zu zwei verschiedenen Zeitpunkten der COVID-19-Pandemie'
   description: 'Obwohl die körperliche Aktivität während der COVID-19-Pandemie mit sozialen Distanzierungsmaßnahmen und der Anweisung, zu Hause zu bleiben, abnahm, hatten Jugendliche, die sich mehr körperlich betätigten, weniger psychische Gesundheitsprobleme. Ob und wie körperliche Aktivität ihre schützende Wirkung während der gesamten Pandemie beibehielt, bleibt unklar. Diese Studie modelliert Zusammenhänge zwischen drei Arten von körperlicher Aktivität (drinnen, draußen, mit den Eltern), Affektregulation sowie ängstlichen und depressiven Symptomen in zwei jugendlichen Stichproben (W1: Sommer 2020; W2: Winter 2020/21). 662 kanadische Jugendliche (W1: Mage = 15.69, SD = 1.36; 52% Mädchen; 5% trans+) und 675 kanadische Jugendliche (W2: Mage = 15.80, SD = 1.46; 50% Mädchen; 6% trans+) nahmen an einer Online-Umfrage teil. Die Daten umfassten die Häufigkeit der körperlichen Aktivität in geschlossenen Räumen, im Freien und mit den Eltern, die Affektregulation und die Messung von ängstlichen und depressiven Symptomen. Eine gruppenübergreifende Pfadanalyse zeigte, dass körperliche Aktivität in Innenräumen einen indirekten Effekt auf Angst und depressive Symptome hatte, allerdings nur bei W1. Körperliche Aktivität mit den Eltern wirkte sich sowohl bei W1 als auch bei W2 schützend auf die Angst- und Depressionssymptome der Jugendlichen aus und hatte einen indirekten Effekt über die Affektregulation. Die Ergebnisse tragen zu unserem Verständnis darüber bei, wie körperliche Aktivität die psychische Gesundheit von Jugendlichen schützt, und weisen auf eine Stärkung der familiären Unterstützung und der Freizeitmöglichkeiten hin.' 
-  tags:        [COVID-19, körperliche Aktivität, psychische Gesundheit, Jugendliche, Affektregulation]
+  tags:        [COVID-19, psychische Gesundheit, Jugendliche, Affektregulation, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.31234/osf.io/y2b4k
 ---
