--- a/_studies/2022-01-18-10.1371_journal.pone.0262332.md
+++ b/_studies/2022-01-18-10.1371_journal.pone.0262332.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Die Auswirkungen der Lockdowns während der COVID-19-Pandemie auf das Lebensstilverhalten und die Veränderung des Körpergewichts: Ergebnisse der Online-Umfrage MyNutriLifeCOVID-19'
   description: 'Die COVID-19-Pandemie hat das tägliche Leben der Bevölkerung weltweit beeinflusst. Diese Studie zielt darauf ab, das Lebensstilverhalten und dessen Zusammenhang mit Veränderungen des Körpergewichts unter malaysischen Erwachsenen während des Lockdowns aufgrund der COVID-19-Pandemie zu bestimmen. Insgesamt nahmen 1319 malaysische Erwachsene an dieser Online-Querschnittsbefragung teil. Die Befragten machten Angaben zu anthropometrischen Daten, einschließlich Körpergewicht und -größe, sowie zu ihrem Lebensstil, einschließlich Essverhalten, körperlicher Aktivität und Schlafverhalten. Ein multivariables verallgemeinertes lineares Mischmodell wurde verwendet, um die Zusammenhänge zwischen Lebensstilverhalten und Körpergewichtsveränderungen zu bewerten, wobei Störfaktoren wie Alter, Geschlecht, ethnische Zugehörigkeit und Körpergewichtsstatus vor der MCO bereinigt wurden. Während der MCO gaben 41,2 % der Befragten an, sich gesünder zu ernähren, aber 36,3 % reduzierten ihre körperlichen Aktivitäten, und 25,7 % hatten eine schlechtere Schlafqualität. Außerdem war der Anteil der Erwachsenen, die angaben, Gewicht verloren zu haben (32,2 %), fast gleich groß wie der Anteil derer, die angaben, Gewicht zugenommen zu haben (30,7 %). Lifestyle-Verhaltensweisen wie die seltenere Anwendung gesunder Kochmethoden und das Auslassen des Mittagessens wurden mit einer Gewichtszunahme in Verbindung gebracht, während der seltenere Verzehr von fettreichen Lebensmitteln, häufigere körperliche Aktivität und eine gute Schlaflatenz mit einem geringeren Risiko einer Gewichtszunahme verbunden waren. Im Gegensatz dazu waren das Einhalten eines gesunden Ernährungskonzepts, das Auslassen des Mittagessens und häufigere körperliche Betätigung signifikant mit einer Gewichtsabnahme verbunden. Lifestyle-Verhaltensweisen wurden mit Veränderungen des Körpergewichts während der MCO in Verbindung gebracht. Während der COVID-19-Lockdown notwendig ist, um eine weitere Ausbreitung der Krankheit zu verhindern, sollte die Förderung gesunder Lebensstilpraktiken während des Lockdowns für ein gesundes Gewicht und eine bessere Gesundheit umgesetzt werden.' 
-  tags:        [COVID-19, Körpergewicht, körperliche Aktivität, Gewichtszunahme, Lebensmittel, Ernährung, Übergewicht, Pandemien]
+  tags:        [COVID-19, Körpergewicht, Gewichtszunahme, Lebensmittel, Ernährung, Übergewicht, Pandemien, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1371/journal.pone.0262332
 ---
