--- a/_studies/2022-01-21-10.2196_33322.md
+++ b/_studies/2022-01-21-10.2196_33322.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Entwicklung einer adaptiven Intervention für körperliche Aktivität und Ernährung bei Jugendlichen mit COVID-19-bedingten Gesundheitsproblemen: Formative Forschungsstudie'
   description: 'Angesichts der ständig steigenden Raten von Fettleibigkeit bei Kindern werden wirksame Maßnahmen für körperliche Bewegung und Ernährung benötigt. Formative Forschung wird eingesetzt, um Interventionen auf unterschiedliche kulturelle und geografische Kontexte zuzuschneiden, und kann bei der Anpassung von Interventionsstrategien angesichts erheblicher Störfaktoren (wie COVID-19) entscheidend sein. Wir führten formative Forschung mittels persönlicher und webbasierter Fokusgruppen unter Mittelschülern und Eltern durch, um die Faktoren und Hindernisse für körperliche Aktivität und den Verzehr von Obst und Gemüse besser zu verstehen und die Gestaltung einer umfangreichen Intervention in einem städtischen Umfeld mit niedrigem Einkommen im Mittleren Westen der USA zu unterstützen. Wir führten 2 Phasen qualitativer Fokusgruppen mit Eltern (n=20) und Mittelschülern der 6. bis 9. Klasse (n=23) durch. Phase 1 wurde vor der COVID-19-Pandemie Ende 2019 und Phase 2 während der COVID-19-Pandemie im Sommer 2020 durchgeführt. Die Fokusgruppen wurden transkribiert und mit Hilfe der Software Dedoose thematisch kodiert. Zu den wichtigsten Faktoren, die körperliche Aktivität vor der Pandemie förderten, gehörten die Möglichkeit, Spaß zu haben, der Einfluss von Gleichaltrigen, Wettbewerb (für einige) und Anreize, während die wichtigsten Hindernisse für körperliche Aktivität Zeitmangel und soziales Unbehagen waren. Zu den wichtigsten Faktoren, die den Verzehr von Obst und Gemüse begünstigten, gehörten der Einfluss der Eltern, die Zubereitungsart und die Bequemlichkeit, während zu den Hindernissen die Abneigung gegen Gemüse, Zeitmangel und die Zubereitung oder Frische zählten. Während der Pandemie blieben die Faktoren, die die körperliche Betätigung erleichtern, gleich, während zusätzliche Hindernisse für die körperliche Betätigung wie mangelnde Motivation und begrenzte Zeit, die außerhalb des Hauses verbracht wird, gemeldet wurden. Was den Verzehr von Obst und Gemüse betrifft, so blieben sowohl die Faktoren als auch die Hindernisse in beiden Zeiträumen gleich. Darüber hinaus sahen einige Teilnehmer die Pandemie als Gelegenheit, Mittelschülern während des Tages mehr Obst und Gemüse anzubieten. Einige der ermittelten Themen waren denen aus früheren Studien ähnlich, z. B. der Einfluss von Gleichaltrigen auf körperliche Aktivität und der Einfluss der Eltern auf den Obst- und Gemüsekonsum. Neue Themen wie mangelnde Motivation, sich zu bewegen, und begrenzte Zeit außerhalb des Hauses trugen dazu bei, die Anpassung der Intervention zu verbessern, insbesondere während der COVID-19-Pandemie. Die Kontinuität der formativen Forschung nach einer größeren unerwarteten Veränderung des Interventionskontextes kann von entscheidender Bedeutung sein, um Bereiche einer Intervention zu ermitteln, die beibehalten werden können, und solche, die angepasst werden müssen. ' 
-  tags:        [COVID-19, Intervention, körperliche Aktivität, Ernährung, Bewegung, junge Erwachsene, Teenager]
+  tags:        [COVID-19, Intervention, Ernährung, Bewegung, junge Erwachsene, Teenager, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.2196/33322
 ---
