--- a/_studies/2022-01-21-10.3390-ijerph19031194.md
+++ b/_studies/2022-01-21-10.3390-ijerph19031194.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Veränderung der Depression und ihrer Determinanten während der COVID-19-Pandemie: Eine Längsschnittuntersuchung unter rassisch/ethnisch gemischten US-Erwachsenen'
   description: 'Diese Studie untersuchte Längsschnittdaten, um Veränderungen im Auftreten depressiver Symptome zu ermitteln und zu untersuchen, ob solche Veränderungen mit soziodemografischen, Bewegungsverhaltens- und Gesundheitsvariablen während der COVID-19-Pandemie bei einer heterogenen Stichprobe von Bewohnern von Zentraltexas zusammenhängen. Eingeschlossen wurden Teilnehmer, die im Jahr 2020 zwei Online-Umfragen (im Juni und November) im Rahmen einer laufenden Längsschnittstudie ausfüllten. Die depressiven Symptome wurden mit dem Patient Health Questionnaire-2 gemessen. Die Veränderung des Auftretens depressiver Symptome zwischen den beiden Zeitpunkten wurde kategorisiert in (1) stabil/verbessert und (2) gleichbleibende depressive Symptome/verringert. Soziodemografische Faktoren, Bewegungsverhalten und Gesundheitsdaten wurden in Selbstauskünften angegeben. Für die statistischen Analysen wurden deskriptive Statistiken und logistische Regressionen verwendet. Von den insgesamt 290 Personen (84,1 % weiblich; 71,0 % Angehörige rassischer/ethnischer Minderheiten) wurden 13,5 % als durchgängig depressiv/abgestumpft eingestuft. Die multivariable logistische Regression ergab, dass Angehörige rassischer/ethnischer Minderheiten, ein höheres Alter und eine erhöhte körperliche Aktivität mit einer geringeren Wahrscheinlichkeit verbunden waren, während ein höherer Anteil an sitzender Tätigkeit mit einer höheren Wahrscheinlichkeit für anhaltende depressive Symptome bzw. einer Verschlechterung verbunden war. Zwischen 3 Monaten und 8 Monaten nach der Pandemie wurden verschiedene soziodemografische und verhaltensbezogene Variablen mit Veränderungen des Auftretens depressiver Symptome in Verbindung gebracht. Künftige Forschungsarbeiten sollten die längerfristigen Auswirkungen von COVID-19 auf Depressionen in einer heterogenen Bevölkerung untersuchen und Risikofaktoren für Depressionen ermitteln. ' 
-  tags:        [Depression, rassische/ethnische Minderheiten, Gesundheitsverhalten, Längsschnittdesign, COVID-19, psychische Gesundheit, körperliche Aktivität, sitzende Tätigkeit]
+  tags:        [Depression, rassische/ethnische Minderheiten, Gesundheitsverhalten, Längsschnittdesign, COVID-19, psychische Gesundheit, sitzende Tätigkeit, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.3390/ijerph19031194
 ---
