--- a/_studies/2022-01-21-10.3390-su14031196.md
+++ b/_studies/2022-01-21-10.3390-su14031196.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen eines dreimonatigen COVID-19-Lockdowns auf die Körpermasse und den Ernährungszustand von libanesischen Sportstudenten'
   description: 'Diese Studie untersuchte die Auswirkungen einer dreimonatigen COVID-19-Sperre auf die Körpermasse von libanesischen Sportstudenten und ob sich diese Veränderungen in der Verteilung von Untergewicht, Normalgewicht und Übergewicht/Fettleibigkeit widerspiegeln. Darüber hinaus wurde untersucht, ob sich die Ausgangssperre auf das Bewegungsverhalten auswirkt und ob Schüler, die die Häufigkeit ihrer Trainingseinheiten reduzierten, mit größerer Wahrscheinlichkeit ihr Körpergewicht erhöhten. Körpermasse und Körpergröße wurden bei 174 libanesischen Sportschülern unmittelbar vor und am Ende der COVID-19-Sperre ermittelt. Ihre Trainingsroutine wurde anhand eines Fragebogens bewertet. Mit dem Wilcoxon-Signed-Rank-Test wurden die Auswirkungen der Sperre auf die Körpermasse untersucht, während der Chi-Quadrat-Test die Unterschiede in der Verteilung von Untergewicht, Normalgewicht und Übergewicht/Fettleibigkeit vor und nach der Sperre prüfte. Im Allgemeinen war ein signifikanter (p < 0,001) kleiner Anstieg der Körpermasse zu verzeichnen. Bei etwa 27 % der Teilnehmer war jedoch eine mäßige bis starke Zunahme der Körpermasse zu verzeichnen. Dies spiegelte sich in einer signifikanten Veränderung des Ernährungszustands wider, da die Zahl der übergewichtigen/fettleibigen Schüler um 5,2 % zunahm. Darüber hinaus war die Wahrscheinlichkeit, dass Studenten, die ihre Trainingshäufigkeit aufgrund der Schließung reduzierten, dreimal so hoch wie die derjenigen, die aktiv blieben (d. h. 38 vs. 5 mit mäßiger bis starker Zunahme). In Anbetracht der Tatsache, dass eine Zunahme der Körpermasse alle Gesundheitsrisiken erhöht, ist es für die Gesundheitsprävention von großer Bedeutung, körperlich aktiv zu bleiben, insbesondere in Anbetracht aller anderen positiven Auswirkungen körperlicher Aktivität auf die kardio-respiratorische und die Muskelfunktion.' 
-  tags:        [COVID-19, körperliche Aktivität, nachhaltige Gesundheit, Bildung, Adipositas]
+  tags:        [COVID-19, nachhaltige Gesundheit, Bildung, Adipositas, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/su14031196
 ---
