--- a/_studies/2022-01-31-10.1016-j.clnesp.2022.01.024.md
+++ b/_studies/2022-01-31-10.1016-j.clnesp.2022.01.024.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen des COVID-19-Lockdown auf die Gewichtszunahme und die körperliche Aktivität bei älteren Erwachsenen: Daten aus der LOST-Studie in der Lombardei'
   description: 'Die COVID-19-Maßnahmen hatten erhebliche Auswirkungen auf den Lebensstil der Allgemeinbevölkerung, einschließlich der körperlichen Aktivität. Obwohl ältere Erwachsene besonders anfällig für die potenziellen Folgen einer sitzenden Lebensweise und Inaktivität sind, haben nur wenige Studien die Auswirkungen der Pandemie in diesem Bevölkerungssegment untersucht. Unser Ziel war es, die Auswirkungen der COVID-19-Pandemie auf die Gewichtszunahme und die körperliche Aktivität bei älteren Erwachsenen in Italien zu untersuchen und die Auswirkungen möglicher Veränderungen der körperlichen Aktivität auf das psychische Wohlbefinden zu bewerten. Im November 2020 wurde eine Querschnittserhebung an einer repräsentativen Stichprobe von 4 400 älteren Erwachsenen (ab 65 Jahren) aus der norditalienischen Region Lombardei durchgeführt. Dabei wurden Veränderungen des Body-Mass-Index (BMI) und der körperlichen Aktivität im Vergleich zum Vorjahr untersucht. Mithilfe unbedingter logistischer Modelle wurden die Odds Ratios (OR) und die entsprechenden 95 %-Konfidenzintervalle (CI) eines Rückgangs der körperlichen Aktivität während der COVID-19-Pandemie geschätzt, und es wurde untersucht, ob die verringerte körperliche Aktivität eine Determinante für eine Verschlechterung des psychischen Wohlbefindens war. Während der Pandemie kam es weder zu einer Gewichtszunahme noch zu einem Anstieg der Fettleibigkeitsprävalenz. Die durchschnittliche Zeit, die mit körperlicher Aktivität verbracht wurde, nahm deutlich ab, wobei 43,8 % der Teilnehmer angaben, dass sie während der COVID-19-Pandemie eine Stunde oder mehr pro Woche weniger Sport trieben. Eine verringerte körperliche Aktivität war ausschlaggebend für eine Verschlechterung ausgewählter psychischer Gesundheitsergebnisse, wie z. B. Schlafqualität und -quantität, Angst und depressive Symptome. Während der COVID-19-Pandemie wurden zwar keine größeren Veränderungen des BMI beobachtet, aber die körperliche Aktivität nahm bei den älteren Erwachsenen deutlich ab. In dieser Bevölkerungsgruppe könnte der Mangel an körperlicher Betätigung zu der beobachteten Verschlechterung der psychischen Gesundheit beigetragen haben. In Notfallsituationen könnte eine Förderung der körperlichen Aktivität auch für die Erhaltung des psychischen Wohlbefindens wirksam sein.' 
-  tags:        [körperliche Aktivität, Übergewicht, Fettleibigkeit, ältere Erwachsene, Lockdown]
+  tags:        [Übergewicht, Fettleibigkeit, ältere Erwachsene, Lockdown, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1016/j.clnesp.2022.01.024
 ---
