--- a/_studies/2022-02-01-10.1007-s10882-022-09836-x.md
+++ b/_studies/2022-02-01-10.1007-s10882-022-09836-x.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'COVID-19 und Bewegungsverhalten bei Menschen mit neurologischen Erkrankungen: Eine systematische Überprüfung'
   description: 'Die COVID-19-Pandemie hat zu einer radikalen Änderung des Lebensstils geführt, die möglicherweise unbeabsichtigt das Niveau der körperlichen Aktivität verändert. Unser Ziel war es, in einer systematischen Übersichtsarbeit die Veränderungen der körperlichen Aktivität bei Menschen mit neurologischen Erkrankungen zu untersuchen und den Zusammenhang zwischen körperlicher Aktivität und Krankheitssymptomen sowie psychosozialen Faktoren zu untersuchen. Die Untersuchung wurde in Übereinstimmung mit der PRISMA-Erklärung (Preferred Reporting Items for Systematic Reviews and Meta-Analyses) durchgeführt. Es wurde eine systematische Literaturrecherche in fünf Datenbanken (PubMed, CINAHL, Web of Science, SCOPUS und Cochrane Library) durchgeführt, wobei die Schlüsselwörter COVID-19, körperliche Aktivität, sitzende Tätigkeit, Bewegung und die Namen der neurologischen Erkrankungen verwendet wurden. Die systematische Suche wurde am 4. Februar 2021 mit denselben Stichworten aktualisiert. Vierzehn Studien (n = 7662 Personen mit neurologischen Erkrankungen, n = 1663 gesunde Kontrollen) kamen für diese Überprüfung in Frage. Bei den Studienpopulationen handelte es sich um Parkinson (n = 7), Demenz (n = 1), Multiple Sklerose (n = 1), Rückenmarksverletzungen (n = 1), hereditäre spastische Paraplegie (n = 1), neuromuskuläre Erkrankungen (n = 1), Charcot-Marie-Tooth-Neuropathie (n = 1) und Epilepsie (n = 1). Dreizehn Studien berichteten über einen Rückgang der körperlichen Aktivität, eine Studie über eine hohe Unterbrechungsrate der Physiotherapie/Rehabilitation. Darüber hinaus war die Verringerung der körperlichen Aktivität mit einer Verschlechterung der Krankheitssymptome, der Depression, der wahrgenommenen Gesundheit und der geistigen und körperlichen Komponenten der Lebensqualität verbunden. Die COVID-19-Pandemie wirkt sich negativ auf das körperliche Aktivitätsniveau von Menschen mit neurologischen Erkrankungen aus, und diese Veränderung stand im Zusammenhang mit der Verschlechterung von Krankheitssymptomen und psychosozialen Faktoren.' 
-  tags:        [körperliche Aktivität, sesshaftes Verhalten, Bewegung, neurologische Erkrankung]
+  tags:        [sesshaftes Verhalten, Bewegung, neurologische Erkrankung, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1007/s10882-022-09836-x
 ---
