--- a/_studies/2022-02-01-10.1186-s12889-022-12590-6.md
+++ b/_studies/2022-02-01-10.1186-s12889-022-12590-6.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Der Zusammenhang zwischen körperlicher Aktivität und psychischer Gesundheit im ersten Jahr der COVID-19-Pandemie: eine systematische Untersuchung'
   description: 'Die Pandemie der Coronavirus-Krankheit-19 (COVID-19) hat Länder auf der ganzen Welt betroffen und das Leben der Menschen verändert. Vor allem im ersten Jahr der COVID-19-Pandemie wurden eine Verringerung der körperlichen Aktivität und eine Zunahme der psychischen Gesundheitsprobleme beobachtet. Ziel dieser systematischen Übersichtsarbeit ist es daher, den Zusammenhang zwischen körperlicher Aktivität und psychischer Gesundheit während des ersten Jahres der COVID-19-Pandemie zu untersuchen. Im Juli 2021 wurde eine Suche in PubMed, Scopus und Web of Science durchgeführt. Zu den Zulassungskriterien gehörten Querschnitts-, prospektive und Längsschnittstudien sowie Studien, die in englischer Sprache veröffentlicht wurden; zu den Ergebnissen gehörten körperliche Aktivität und psychische Gesundheit (z. B. depressive Symptome, Angst, positive und negative Auswirkungen, Wohlbefinden). Einunddreißig Studien wurden in diese Überprüfung einbezogen. Insgesamt deuten die Studien darauf hin, dass eine höhere körperliche Aktivität mit höherem Wohlbefinden und höherer Lebensqualität sowie mit geringeren depressiven Symptomen, Ängsten und Stress verbunden ist, und zwar unabhängig vom Alter. Es gab keinen Konsens über das optimale Maß an körperlicher Aktivität zur Linderung negativer psychischer Symptome, weder für die Häufigkeit noch für die Art der körperlichen Betätigung. Frauen waren anfälliger für Veränderungen der psychischen Gesundheit und Männer anfälliger für Veränderungen der körperlichen Aktivität. Körperliche Aktivität war eine gute und wirksame Wahl, um die negativen Auswirkungen der COVID-19-Pandemie auf die psychische Gesundheit während des ersten Jahres der COVID-19-Pandemie zu mildern. Die öffentliche Gesundheitspolitik sollte in vielen Ländern weltweit nach Möglichkeiten suchen, die körperliche Aktivität während des Lockdown zu erhöhen.' 
-  tags:        [Pandemie, körperliche Aktivität, psychische Gesundheit, Angst]
+  tags:        [Pandemie, psychische Gesundheit, Angst, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1186/s12889-022-12590-6
 ---
