--- a/_studies/2020-08-28-10.3390_ijerph17176265.md
+++ b/_studies/2020-08-28-10.3390_ijerph17176265.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Praktische Empfehlungen zur Aufrechterhaltung eines aktiven Lebensstils während der COVID-19-Pandemie: Eine systematische Literaturübersicht'
   description: 'Als Folge der COVID-19-Heimeinweisung wurden ein vermindertes Maß an gewohnter körperlicher Aktivität und ein erhöhtes Maß an sitzender Tätigkeit beobachtet. Über die Folgen der Inaktivität, einschließlich einer höheren Sterblichkeitsrate und einer schlechteren allgemeinen Gesundheit und Fitness, wurde berichtet. Ziel dieser systematischen Überprüfung war, praktische Empfehlungen für die Aufrechterhaltung eines aktiven Lebensstils während einer Pandemie zu geben. Im Mai 2020 wurden zwei elektronische Datenbanken (PubMed; Web of Science) zur Suche nach relevanten Studien genutzt. Insgesamt 1.206 Datensätze wurden von zwei Forschern gesichtet. 31 relevante Studien wurden in diese systematische Überprüfung einbezogen, bei der die methodische Qualität bewertet wurde. Bei sechs Studien, die sich explizit mit körperlicher Aktivität während COVID-19 befassten, wird die Evidenzstufe bei drei Artikeln auf Stufe II und bei den anderen drei auf Stufe VI eingestuft. Was die Empfehlungen zur körperlichen Betätigung in diesen Arbeiten betrifft, so wurden drei von ihnen als mittelmäßig und die gleiche Anzahl als schwach belegt eingestuft. Von den 25 Arbeiten, die sich auf andere Pandemien und/oder Isolationssituationen beziehen, wurde eine auf Evidenzstufe I, vier auf Stufe II, drei auf Stufe III, eine auf Stufe V und die anderen auf Stufe VI eingestuft. Diese systematische Überprüfung ergab, dass ein vermindertes Maß an körperlicher Aktivität während der häuslichen Unterbringung in Pandemiezeiten ein ernsthaftes Problem darstellt. Die Empfehlungen vieler internationaler Organisationen zur Aufrechterhaltung eines aktiven Lebensstils in dieser Zeit richten sich hauptsächlich an die Allgemeinbevölkerung und berücksichtigen weniger die gefährdeten Bevölkerungsgruppen (z. B. ältere Erwachsene, Menschen mit gesundheitlichen Problemen). Daher sind personalisierte und betreute Bewegungsprogramme dringend erforderlich, mit der Möglichkeit, Bewegungsprogramme in Gruppen zu spielen (z. B. Exergames). Diese können durch Lösungen der Informations- und Kommunikationstechnologie unterstützt, bereitgestellt und weltweit verbreitet werden. Sofern erlaubt und sicher, ist zu empfehlen, sich bei Tageslicht im Freien zu bewegen, und zwar mit einem leichten bis mäßigen Anstrengungsgrad auf der Skala der wahrgenommenen Anstrengung. Entspannungstechniken sollten in den Tagesablauf integriert werden, um das Stressniveau zu senken. Angesichts der Evidenzbasis und des Niveaus der in dieser Übersicht enthaltenen Artikel sind die Ergebnisse mit Vorsicht zu interpretieren. Da die politischen Maßnahmen in den einzelnen Regionen und Ländern unterschiedlich sind, sind weitere Untersuchungen erforderlich, um die Empfehlungen nach den verschiedenen Szenarien der sozialen Benachteiligung zu kategorisieren.' 
-  tags:        [COVID-19, Pandemie, Soziale Isolation, Quarantäne, körperliche Aktivität, Empfehlungen]
+  tags:        [COVID-19, Pandemie, Soziale Isolation, Quarantäne, Empfehlungen, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/ijerph17176265
 ---
