--- a/_studies/2020-12-15-10.3390_ijerph17249419.md
+++ b/_studies/2020-12-15-10.3390_ijerph17249419.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Psychische Gesundheit und körperliches Aktivitätsniveau während der COVID-19-Pandemie: Eine systematische Überprüfung'
   description: 'Die Coronavirus-Pandemie (COVID-19) war in jeder Hinsicht verheerend, insbesondere in psychologischer Hinsicht. Bekannt ist, dass körperliche Aktivität (PA) das psychische Wohlbefinden fördert, und es lohnt sich zu untersuchen, ob PA eine Bewältigungsstrategie während dieser Pandemie war. Ziel dieser Literaturrecherche ist, zu analysieren, inwieweit sich körperliche Aktivität während der COVID-19-Pandemie auf die psychische Gesundheit der erwachsenen Bevölkerung auswirkt. Die Literatur wurde in allen Datenbanken der EBSCOhost Research Database - MEDLINE, APA PsycArticles und anderen - recherchiert, die zwischen dem 1. Januar 2019 und dem 15. Juli 2020 veröffentlicht wurden. Von 180 gefundenen Artikeln waren 15 geeignet. Die analysierten Artikel zeigten einen Zusammenhang zwischen psychischer Belastung - z. B. Stress, Angst, depressive Symptome, soziale Isolation, psychische Belastung - und PA. Die Studie kommt zu dem Schluss, dass die COVID-19-Pandemie und die Abriegelungsmaßnahmen psychische Probleme verursachten. Die Studien, die PA analysierten, zeigten, dass Erwachsene während der Quarantäne ihre sitzende Tätigkeit erhöhten und ihr PA-Niveau reduzierten, was zu kontroversen psychologischen Ergebnissen führte. In dieser Übersichtsarbeit wird erörtert, ob PA eine wirksame Strategie ist, um den psychologischen Auswirkungen der COVID-19-Pandemie zu begegnen, die vermutlich zu einem weiteren Anstieg der Prävalenz psychiatrischer Störungen führt.' 
-  tags:        [COVID-19, körperliche Aktivität, psychische Gesundheit, psychische Belastung, Coronavirus, Lockdown, Pandemie]
+  tags:        [COVID-19, psychische Gesundheit, psychische Belastung, Coronavirus, Lockdown, Pandemie, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/ijerph17249419
 ---
