--- a/_studies/2021-02-01-10.1136_bmjsem-2020-000960.md
+++ b/_studies/2021-02-01-10.1136_bmjsem-2020-000960.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Veränderungen der körperlichen Aktivität und des sitzenden Verhaltens vor und während der COVID-19-Pandemie: eine systematische Übersicht'
   description: 'Im März 2020 haben mehrere Länder während COVID-19 unnötige Aktivitäten im Freien verboten, die gemeinhin als Lockdowns bezeichnet werden. Diese Verbote haben das Potenzial, sich auf das damit verbundene Maß an körperlicher Aktivität und sitzendem Verhalten auszuwirken. Angesichts der zahlreichen gesundheitlichen Auswirkungen, die mit körperlicher Aktivität und sitzendem Verhalten verbunden sind, bestand das Ziel dieser Übersichtsarbeit darin, die Literatur zusammenzufassen, die Unterschiede in der körperlichen Aktivität und dem sitzenden Verhalten vor und während der COVID-19-Sperrzeit untersucht hat. Elektronische Datenbanken wurden von November 2019 bis Oktober 2020 mit Begriffen und Synonymen im Zusammenhang mit körperlicher Aktivität, sitzendem Verhalten und COVID-19 durchsucht. Die koprimären Ergebnisse waren Veränderungen der körperlichen Aktivität und/oder des sitzenden Verhaltens, die über gerätebasierte Messungen oder Selbstauskünfte erfasst wurden. Das Risiko einer Verzerrung wurde anhand der Newcastle-Ottawa-Skala gemessen. Sechsundsechzig Artikel erfüllten die Einschlusskriterien und wurden in die Überprüfung einbezogen (insgesamt n=86 981). In 64 Studien wurde über Veränderungen der körperlichen Aktivität berichtet, wobei die Mehrheit der Studien über eine Abnahme der körperlichen Aktivität und eine Zunahme des sitzenden Verhaltens während der jeweiligen Sperrzeit in verschiedenen Bevölkerungsgruppen, einschließlich Kindern und Patienten mit einer Vielzahl von Erkrankungen, berichtete. In Anbetracht der zahlreichen körperlichen und geistigen Vorteile einer erhöhten körperlichen Aktivität und einer Verringerung des sitzenden Verhaltens sollten Strategien für die öffentliche Gesundheit die Entwicklung und Umsetzung von Maßnahmen zur Förderung einer sicheren körperlichen Aktivität und zur Verringerung des sitzenden Verhaltens umfassen, falls es zu weiteren Lockdowns kommt.' 
-  tags:        [COVID-19, körperliche Aktivität, sitzendes Verhalten, Lockdown]
+  tags:        [COVID-19, sitzendes Verhalten, Lockdown, Körperliche Aktivität]
 group:         'Treatments'
 credit:        http://dx.doi.org/10.1136/bmjsem-2020-000960
 ---
