--- a/_studies/2021-04-13-10.1136_bjsports-2020-103758.md
+++ b/_studies/2021-04-13-10.1136_bjsports-2020-103758.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen des Tragens einer Gesichtsmaske aus Stoff auf die Leistung sowie die physiologischen und wahrnehmungsbezogenen Reaktionen während eines abgestuften Belastungstests auf dem Laufband'
   description: 'Ziel der Studie war (1) festzustellen, ob das Tragen einer Gesichtsmaske aus Stoff einen signifikanten Einfluss auf die körperliche Leistungsfähigkeit und die damit verbundenen physiologischen Reaktionen hat, und (2) die wahrgenommene Anstrengung und die Erfahrungen der Teilnehmer beim Tragen einer Gesichtsmaske während eines maximalen Laufbandtests zu beschreiben. Randomisierte kontrollierte Studie mit gesunden Erwachsenen im Alter von 18-29 Jahren. Die Teilnehmer absolvierten zwei maximale kardiopulmonale Belastungstests (CPETs) auf einem Laufband nach dem Bruce-Protokoll (mit und ohne Gesichtsmaske). Gemessen wurden Blutdruck, Herzfrequenz, Sauerstoffsättigung, Anstrengung und Kurzatmigkeit. Deskriptive Daten und die Geschichte der körperlichen Aktivität wurden vor der Studie erhoben; die Wahrnehmung des Tragens von Gesichtsmasken und Erfahrungsdaten wurden unmittelbar nach der maskierten Studie gesammelt. Die endgültige Stichprobe umfasste 31 Erwachsene (Alter=23,2±3,1 Jahre; 14 Frauen/17 Männer). Die Daten zeigten, dass das Tragen einer Stoffmaske zu einer signifikanten Verringerung der Trainingszeit (-01:39±01:19 min/sec), des maximalen Sauerstoffverbrauchs (VO2max) (-818±552 mL/min), der Minutenventilation (-45,2±20,3 L/min), der maximalen Herzfrequenz (-8,4±17,0 Schläge pro Minute) und einer erhöhten Dyspnoe (1,7±2,9) führte. Unsere Daten deuten auch darauf hin, dass es zwischen den verschiedenen Phasen des CPET Unterschiede beim SpO2 und der Bewertung der wahrgenommenen Anstrengung gab, wenn die Trainingsintensität der Teilnehmer zunahm. Nach der 7-minütigen Erholungsphase wurden keine signifikanten Unterschiede zwischen den Bedingungen festgestellt. Stoffmasken führten zu einer Verkürzung der Trainingszeit um 14 % und einer Verringerung der VO2max um 29 %, was auf das mit dem Tragen der Maske verbundene Unbehagen zurückgeführt wurde. Im Vergleich zu Teilnehmern ohne Maske berichteten die Teilnehmer, dass sie sich bei höheren Trainingsintensitäten zunehmend kurzatmig und klaustrophobisch fühlten, während sie eine Stoffmaske trugen. Trainer, Ausbilder und Sportler sollten in Erwägung ziehen, Häufigkeit, Intensität, Zeit und Art des Trainings zu ändern, wenn sie eine Stoffmaske tragen.' 
-  tags:        [Ermüdung, körperliche Aktivität, Atmung, Gesichtsmasken, COVID-19]
+  tags:        [Ermüdung, Atmung, Gesichtsmasken, COVID-19, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1136/bjsports-2020-103758
 ---
