--- a/_studies/2021-09-08-10.3389_fped.2021.695703.md
+++ b/_studies/2021-09-08-10.3389_fped.2021.695703.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'COVID-19-Pandemie und verminderte körperliche Aktivität: Gibt es einen Einfluss auf gesunde und asthmatische Kinder?'
   description: 'Körperliche Aktivität (PA) verbessert nachweislich Asthmasymptome, Lungenfunktion und Lebensqualität und verringert die Entzündung der Atemwege und die bronchiale Reaktionsfähigkeit. Infolge der COVID-19-Pandemie ist die von der Weltgesundheitsorganisation empfohlene Mindestmenge an körperlicher Betätigung - d. h. etwa 60 Minuten pro Tag mit mäßiger bis hoher Intensität - für viele Kinder, insbesondere in städtischen Gebieten, schwer zu erreichen. Kurzfristige Veränderungen der körperlichen Aktivität aufgrund der COVID-19-Pandemie können zur Gewohnheit werden und das Risiko für eine negative Asthmaentwicklung bei Kindern erhöhen. Ein längerer Aufenthalt zu Hause während der COVID-19-Pandemie führt zu einer Verringerung des PA-Niveaus und einer Zunahme des sitzenden Verhaltens, was möglicherweise die Funktion des Immunsystems beeinträchtigt und die Anfälligkeit für Entzündungskrankheiten erhöht. Es gibt jedoch nur wenige Belege für die Auswirkungen von Hausarrest aufgrund von COVID-19 auf die PA und das sitzende Verhalten bei asthmatischen Kindern. Da sich Kinder länger in geschlossenen Räumen aufhalten, stellt die Luftverschmutzung in Innenräumen ein wichtiges Problem dar, das bei einem Hausarrest zu berücksichtigen ist. Diese Übersichtsarbeit soll die verfügbaren Erkenntnisse über die Auswirkungen von verminderter körperlicher Aktivität und vermehrtem sitzenden Verhalten auf Kinder mit Asthma während der COVID-19-Pandemie zusammenfassen. Darüber hinaus werden Strategien zur Förderung der körperlichen Aktivität bei Kindern mit Asthma während der COVID-19-Pandemie vorgeschlagen, wobei auch das Problem der Innenraumluftqualität berücksichtigt wird.' 
-  tags:        [COVID-19, Asthma, Kinder, körperliche Aktivität, sitzende Tätigkeit]
+  tags:        [COVID-19, Asthma, Kinder, sitzende Tätigkeit, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3389/fped.2021.695703
 ---
