--- a/_studies/2021-12-14-10.1055_a-1530-9642.md
+++ b/_studies/2021-12-14-10.1055_a-1530-9642.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Körperliche Aktivität während Corona für Angestellte im Home Office'
   description: 'Bewegungsmangel ist einer der wichtigsten Risikofaktoren für gesundheitliche Probleme. Deshalb wird allgemein empfohlen, sich mindestens 150 Minuten pro Woche moderat oder 75 Minuten intensiv körperlich zu betätigen. Schon vor der Corona-Pandemie haben nationale und internationale Studien auf eine unzureichende körperliche Aktivität in der Bevölkerung hingewiesen. In den Studiengruppen waren über 50 Prozent der Probanden unzureichend körperlich aktiv. Infolge der Pandemie kam es aufgrund des Infektionsschutzes und der damit verbundenen körperlichen Distanzierungsmaßnahmen zu einer erhöhten Aktivität im Home Office. Dies hat zu Veränderungen im Arbeits- und Lebensumfeld und damit auch zu Veränderungen im Gesundheitsverhalten geführt. Die vorliegende Studie geht daher den Fragen nach, welche Auswirkungen die Arbeit im Homeoffice auf die körperliche Aktivität der Beschäftigten hat, welche Faktoren dabei eine Rolle spielen und welche Erkenntnisse sich für die betriebliche Gesundheitsförderung ableiten lassen. Methodik Im Juni 2021 wurde eine Online-Befragung mit dem Global Physical Activity Questionnaire (GPAQ) der Weltgesundheitsorganisation (WHO) sowie einem zusätzlichen Fragebogen zu Veränderungen im Bewegungs- und Sitzverhalten und den zugrunde liegenden Ursachen sowie Beispielen von Aktivitäten und Wünschen für weitere Maßnahmen durchgeführt. Die Auswertung erfolgte für den GPAQ-Fragebogen in Anlehnung an die WHO-Richtlinien und anschließende deskriptive Parameter und Häufigkeiten. Die anderen Variablen wurden primär mit Häufigkeitsverteilungen und Freitextantworten nach der Methode der qualitativen Datenanalyse (QDA) ausgewertet. Ergebnisse 193 Mitarbeiter aus verschiedenen Unternehmen und Branchen nahmen an der Befragung teil, von denen 183 gültige Antworten für eine Tätigkeitsbewertung verwendet werden konnten. 25 Prozent hatten ein niedriges, 51 Prozent ein mittleres und 24 Prozent ein hohes Aktivitätsniveau. Die durchschnittliche Sitzdauer lag bei 8,9 Stunden pro Tag. Bei einigen Studienteilnehmern nahm das Aktivitätsverhalten während der Pandemie zu, während es bei anderen abnahm. Insgesamt gab es eine signifikante Zunahme der Sitzdauer. Die qualitativen Daten zeigen Gründe für die Veränderungen im Bewegungsverhalten auf. Gleichzeitig werden Möglichkeiten zur Förderung der körperlichen Aktivität aufgezeigt. Schlussfolgerungen Die Studie gibt Aufschluss über die Auswirkungen der Heimarbeit während der Corona-Pandemie. Gleichzeitig werden Potenziale für die betriebliche Gesundheitsförderung im Homeoffice deutlicher.' 
-  tags:        [COVID-19, Homeoffice, körperliche Aktivität, betriebliche Gesundheitsförderung, Potenzial, Sport]
+  tags:        [COVID-19, Homeoffice, betriebliche Gesundheitsförderung, Potenzial, Sport, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1055/a-1530-9642
 ---
