--- a/_studies/2021-12-24-10.2991_assehr.k.211223.084_2.md
+++ b/_studies/2021-12-24-10.2991_assehr.k.211223.084_2.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Analyse der körperlichen Aktivität junger Menschen in Ostjava während der Covid-19-Pandemie'
   description: 'Die COVID-19-Pandemie hat zu erheblichen Veränderungen der menschlichen Bewegungsaktivitäten geführt. Meine Aktivitäten, insbesondere körperliche Aktivität, sind eine der nicht-pharmakologischen N77-Behandlungen, die einen positiven Einfluss auf den Menschen haben können. Ziel dieser Studie ist es, die biologischen Aktivitäten von Jugendlichen in Ost-Java zu ermitteln. Einhundertachtundzwanzig Jugendliche in Ost-Java im Alter von 19-24 Jahren nahmen an dieser Studie teil. In dieser Studie wurde eine Umfragemethode zur Datenerhebung verwendet. Für den Fragebogen wurde der Internationale Fragebogen zur körperlichen Aktivität (IPAQ) verwendet. Die Ergebnisse zeigten, dass sich die Befragten im Durchschnitt dreimal pro Woche mit hoher und mittlerer Intensität körperlich betätigten. Im Vergleich dazu wurde die niedrige Intensität viermal pro Woche durchgeführt, entsprechend der Dauer der Übung, die die Personen in 30 Minuten von 60 Minuten machten und sich nur bewegten. Durchschnittlich 2 Stunden pro Tag für sitzende Tätigkeit. Die Schlussfolgerung aus dieser Studie ist, dass die Befragten körperliche Bewegung mit dem Ziel der Leistungssteigerung kombinieren. Dies ist während einer Pandemie sehr unrentabel, wenn der Befragte die Trainingsbelastung und den Umfang der durchgeführten Aktivität nicht mit ausreichender Ruhe und Ernährung ausgleicht.' 
-  tags:        [COVID-19, körperliche Aktivität, Intensität, IPAQ]
+  tags:        [COVID-19, Intensität, IPAQ, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://www.atlantis-press.com/proceedings/ijcah-21/125967544
 ---
