--- a/_studies/2021-12-27-10.1016_j.pmedr.2021.101685.md
+++ b/_studies/2021-12-27-10.1016_j.pmedr.2021.101685.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Moderate bis intensive körperliche Aktivität bei Jugendlichen in den USA während der COVID-19-Pandemie'
   description: 'Ziel dieser Studie war, die moderate bis intensive körperliche Aktivität (MVPA) von Jugendlichen während der COVID-19-Pandemie nach soziodemografischen Merkmalen zu bewerten und Faktoren für die psychische Gesundheit und Resilienz zu bestimmen, die mit MVPA bei einer heterogenen nationalen Stichprobe von Jugendlichen im Alter von 10-14 Jahren in Verbindung stehen. Die Daten wurden während der Pandemie im Mai 2020 im Rahmen der Adolescent Brain Cognitive Development Study (ABCD, N=5.153), einer nationalen prospektiven Kohortenstudie in den USA, erhoben. MVPA wurde als Produkt aus berichteter Dauer und Häufigkeit (Stunden pro Woche) quantifiziert und als Anteil zusammengefasst, der die altersgemäßen Richtlinien für körperliche Aktivität für Amerikaner von 2018 erfüllt. Eine ähnliche Schätzung wurde anhand von MVPA-Daten erstellt, die vor der Pandemie erhoben wurden. Während der Pandemie wurden Daten zur psychischen Gesundheit und Resilienz erhoben. Mit Hilfe von Regressionsmodellen wurden die Zusammenhänge zwischen psychischer Gesundheit oder Resilienzmaßnahmen und MVPA während der Pandemie untersucht. Der mittlere MVPA-Wert lag bei 2 Stunden pro Woche (IQR 0, 6). Insgesamt sank der Prozentsatz der Kohorte, der die MVPA-Richtlinien erfüllte, von 16,1 % (vor der Pandemie) auf 8,9 % während der Pandemie. Bei rassischen/ethnischen Minderheiten und Jugendlichen aus niedrigeren sozioökonomischen Verhältnissen war die Wahrscheinlichkeit, dass die MVPA-Richtlinien während der Pandemie eingehalten wurden, deutlich geringer. Eine schlechtere psychische Gesundheit, COVID-bedingte Sorgen und Stress wurden mit einer geringeren MVPA in Verbindung gebracht, während mehr soziale Unterstützung und Bewältigungsverhalten mit einer höheren MVPA während der Pandemie verbunden waren. In dieser großen, nationalen Stichprobe von Jugendlichen war der Anteil derjenigen, die die MVPA-Richtlinien einhielten, während der COVID-19-Pandemie geringer, wobei es erhebliche Unterschiede nach Rasse und sozioökonomischem Status gab. Maßnahmen zur Förderung der sozialen Unterstützung und des Bewältigungsverhaltens könnten das MVPA-Niveau unter Jugendlichen während der Pandemie verbessern.' 
-  tags:        [körperliche Aktivität, Bewegung, Jugendliche, Coronavirus, COVID-19]
+  tags:        [Bewegung, Jugendliche, Coronavirus, COVID-19, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1016/j.pmedr.2021.101685
 ---
