--- a/_studies/2022-01-10-10.1016_j.ijdrr.2022.102793.md
+++ b/_studies/2022-01-10-10.1016_j.ijdrr.2022.102793.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Körperliche Aktivität und depressive Symptome bei in der Gemeinschaft lebenden älteren Erwachsenen in der Ära der COVID-19-Pandemie: Eine dreiwellige Cross-Lagged-Studie '
   description: 'Ziel der Studie ist es, den Verlauf von körperlicher Aktivität und depressiven Symptomen sowie deren wechselseitige Beziehung bei in der Gemeinschaft lebenden älteren Erwachsenen in der COVID-19-Pandemie-Ära zu bestimmen. Die Studienpopulation bestand aus einer Kohorte von 511 Teilnehmern im Alter von 60 Jahren und älter, die aus acht kommunalen Gesundheitszentren in Yaan, China, rekrutiert wurden. Mit der Physical Activity Scale for the Elderly und dem Patient Health Questionnaire wurden die körperliche Aktivität und die depressiven Symptome zu drei Zeitpunkten gemessen: vor dem Ausbruch von COVID-19 (T0), während des Ausbruchs (T1) und nach dem Abklingen von COVID-19 (T2). Die Ergebnisse zeigten, dass die körperliche Aktivität und die depressiven Symptome zwischen T0, T1 und T2 erheblich schwankten. Darüber hinaus waren schwerere depressive Symptome zu T0 und T1 signifikant mit einem niedrigeren Niveau an körperlicher Aktivität zu T1 und T2 verbunden, aber die umgekehrte Richtung, dass körperliche Aktivität mit späteren depressiven Symptomen verbunden ist, wurde in der aktuellen Studie nicht beobachtet. Diese Ergebnisse unterstreichen, wie wichtig es ist, alte Menschen dabei zu unterstützen, körperlich aktiv zu bleiben und psychische Belastungen frühzeitig zu bekämpfen, und die Prävention und Behandlung depressiver Symptome kann auch zur Förderung körperlicher Aktivität beitragen.' 
-  tags:        [körperliche Aktivität, depressive Symptome, ältere Erwachsene, COVID-19, Cross-Lagged-Panel-Modell, Längsschnittdesign]
+  tags:        [depressive Symptome, ältere Erwachsene, COVID-19, Cross-Lagged-Panel-Modell, Längsschnittdesign, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1016/j.ijdrr.2022.102793
 ---
