--- a/_studies/2022-01-12-10.1111_psyg.12806.md
+++ b/_studies/2022-01-12-10.1111_psyg.12806.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkung von körperlicher Aktivität auf die Stressreaktion bei Menschen ab 65 Jahren während der COVID-19-Lockdowns'
   description: 'Der Ausbruch der COVID-19-Pandemie hat sich negativ auf das Leben vieler Menschen ausgewirkt. Insbesondere die Einschränkung der körperlichen Aktivität (PA) aufgrund der pandemiebedingten Abriegelung hat sich auf ihren psychologischen Zustand ausgewirkt. Ziel dieser Arbeit war es, den Zusammenhang zwischen den Bewegungsgewohnheiten älterer Menschen vor und während der Pandemie und der Stressreaktion auf die häusliche Isolation während der Abriegelung zu untersuchen. Zu diesem Zweck wurde während der ersten Pandemiewelle in Italien (Studie 1) eine Online-Befragung von Personen im Alter von 65 Jahren und älter durchgeführt. Um die Auswirkung von Einschränkungen der körperlichen Betätigung auf die Reaktion auf Stress im Laufe der Zeit zu untersuchen, wurde die Umfrage während der zweiten Welle wiederholt (Studie 2). Eine Gruppe von 72 bzw. 43 Teilnehmern im Alter von 65 bis 88 Jahren nahm an den beiden Studien teil. Im Rahmen der Erhebung mussten der Internationale Fragebogen zur körperlichen Aktivität und zwei Fragebögen zur Stressreaktion ausgefüllt werden, nämlich die Impact of Event Scale-Revised und die Perceived Stress Scale. Die Korrelation zwischen den Ergebnissen der Fragebögen wurde untersucht. Studie 1 zeigte, dass ein höheres Maß an PA während des Lockdowns, bezogen auf Arbeits- und Gehaktivitäten, mit weniger stressbedingten Symptomen und einem geringeren Stressempfinden verbunden war. Parallel dazu war eine stärkere Verringerung des PA während der Abriegelung im Vergleich zur Zeit vor der Pandemie mit mehr stressbedingten Symptomen verbunden. Personen, die vor und während der Pandemieabriegelung mehr Zeit in Ruhe (im Sitzen) verbrachten, wiesen eine höhere psychische Belastung auf. Studie 2 bestätigte die Vorteile der Aufrechterhaltung von Arbeitsaktivitäten während der Abriegelung, zeigte aber auch, dass die Menschen während der zweiten Pandemiewelle besser mit den Einschränkungen der körperlichen Aktivität und der Isolation zu Hause zurechtkamen, selbst wenn sie einen sitzenden Lebensstil pflegten. Die Aufrechterhaltung eines guten Niveaus an körperlicher Aktivität während der Abriegelung war ein Schutzfaktor gegen die Entwicklung stressbedingter Symptome bei älteren Menschen. Andererseits zeigte sich in dieser Bevölkerungsgruppe während der zweiten Welle eine größere Widerstandsfähigkeit gegenüber Stress.' 
-  tags:        [COVID-19, körperliche Aktivität, Stress, Pandemie, Lockdown, ältere Menschen]
+  tags:        [COVID-19, Stress, Pandemie, Lockdown, ältere Menschen, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1111/psyg.12806
 ---
