--- a/_studies/2022-01-13-10.3390_nu14020331.md
+++ b/_studies/2022-01-13-10.3390_nu14020331.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Ernährungsverhalten, Vitaminergänzung und körperliche Aktivität unter polnischen Erwachsenen während der COVID-19-Pandemie'
   description: 'Die COVID-19-Pandemie und ihre Folgen, einschließlich sozialer Isolation, Bewegungseinschränkungen und Arbeitsunfähigkeit, haben das Ernährungsverhalten und den täglichen Lebensstil vieler Menschen verändert. Ziel der Studie war es, den Einfluss der COVID-19-Pandemie auf ausgewählte Ernährungsgewohnheiten, körperliche Aktivität und Veränderungen im täglichen Lebensstil polnischer Erwachsener (n = 145) zu untersuchen. Der selbst entworfene und anonyme Fragebogen war vom 1. Mai 2021 bis zum 15. Mai 2021 online verfügbar. Im Allgemeinen erklärten 60 % der Befragten, dass die COVID-19-Pandemie ihre Ernährungsgewohnheiten nicht beeinflusst hat, während 26 % der befragten Personen dies bejahten. Die Auswirkung der COVID-19-Pandemie auf die Veränderung der Ernährungsgewohnheiten wurde nach Alter differenziert. Die Anzahl der Mahlzeiten, die die Befragten pro Tag zu sich nahmen, unterschied sich zwischen den Geschlechtern. Eine Zunahme des Körpergewichts während der COVID-19-Pandemie wurde von 43 % der Frauen und 7,6 % der befragten Männer angegeben. Darüber hinaus gaben hybride berufstätige Frauen am häufigsten eine Zunahme des Körpergewichts an, unabhängig von Alter, Bildungsstand und Wohnort. Darüber hinaus gab die Mehrheit der Befragten, die über die Auswirkungen der Pandemie auf die Ernährungsgewohnheiten berichteten, auch an, häufiger Süßigkeiten zu konsumieren. Die Studie ergab, dass die Befragten, die angaben, während der COVID-19-Pandemie häufiger Süßigkeiten zu konsumieren, eher mit einer Zunahme der Körpermasse verbunden waren. Es wurde kein Anstieg des Konsums von Vitamin-D-, C- und Mg-Ergänzungsmitteln und eingelegten Lebensmitteln festgestellt.' 
-  tags:        [COVID-19, Pandemie, Essgewohnheiten, Vitaminsupplementierung, Verzehr von eingelegten Lebensmitteln, körperliche Aktivität, täglicher Lebensstil]
+  tags:        [COVID-19, Pandemie, Essgewohnheiten, Vitaminsupplementierung, Verzehr von eingelegten Lebensmitteln, täglicher Lebensstil, Körperliche Aktivität]
 group:         'Treatments'
 credit:        https://doi.org/10.3390/nu14020331
 ---
