--- a/_studies/2022-01-17-10.4025_actascihealthsci.v44i1.57231.md
+++ b/_studies/2022-01-17-10.4025_actascihealthsci.v44i1.57231.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Ernährung, körperliche Aktivität und psychologischer Zustand während des Lodkdown aufgrund von Covid-19'
   description: 'Ziel der vorliegenden Studie war es, die körperliche Aktivität, die Ernährung und den psychologischen Zustand der Bevölkerung während des Lockdown aufgrund von Covid-19 zu bewerten. Es wurde eine Online-Umfrage unter 534 Teilnehmern im Alter von 16 bis 78 Jahren durchgeführt, wobei eine Zufallsstichprobe verwendet wurde. Die Teilnehmer aus verschiedenen Regionen Indiens und aus dem Ausland wurden für die vorliegende Studie rekrutiert. Die freiwilligen Teilnehmer wurden gebeten, an der Umfrage teilzunehmen, indem sie ein Online-Fragebogenformular ausfüllten, das ihnen als URL-Link in der Einladung über WhatsApp/Messenger zur Verfügung gestellt wurde. Die gesammelten Daten wurden mit Microsoft Excel zusammengestellt, kodiert und bereinigt. Die Analyse wurde mit SPSS 17.0 unter Verwendung von deskriptiven und inferentiellen Statistiken durchgeführt. Die Mehrheit der Teilnehmer in der untersuchten Population zeigte eine signifikante Veränderung in ihrem Ernährungs- und Bewegungsstatus aufgrund des Lockdown. Der Lockdown von Covid-19 hat ihre täglichen Aktivitäten eingeschränkt. Er hatte auch Auswirkungen auf ihren psychologischen Status. Die aktuelle Untersuchung unterstreicht die Notwendigkeit, einen angemessenen Lebensstil zur Aufrechterhaltung eines optimalen Stoffwechsels und einer optimalen Physiologie zu verfolgen. Die Einhaltung eines regelmäßigeren Zeitplans für die Mahlzeiten, eine wirksame Stressbewältigung und eine kontinuierliche körperliche Betätigung während der Quarantäne und in allen nachfolgenden Lebensphasen sind wünschenswert. ' 
-  tags:        [COVID-19, körperliche Aktivität, Ernährung, Lockdown, Gesundheit, Verhaltensänderungen]
+  tags:        [COVID-19, Ernährung, Lockdown, Gesundheit, Verhaltensänderungen, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://periodicos.uem.br/ojs/index.php/ActaSciHealthSci/article/view/57231
 ---
