--- a/_studies/2022-01-21-10.1186_s12889-022-12560-y.md
+++ b/_studies/2022-01-21-10.1186_s12889-022-12560-y.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'Auswirkungen der restriktiven niederländischen COVID-19-Maßnahmen auf das Bewegungsverhalten und Ermittlung von Korrelaten für Veränderungen der körperlichen Aktivität: eine Kohortenstudie'
   description: 'Um gezielte Interventionen entwickeln zu können, müssen die Merkmale von Personen identifiziert werden, die mit einer Abnahme der körperlichen Aktivität (PA) während des Lockdown zusammenhängen. Ziel dieser Studie ist, die Veränderungen der bereichsspezifischen (d. h. Freizeit, Verkehr, Beruf und Haushalt) und der gesamten körperlichen Aktivität aufgrund der niederländischen COVID-19-Sperrung, die am 15. März 2020 begann, zu bewerten. Darüber hinaus wollen wir demografische, gesundheitsbezogene und psychologische Korrelate dieser Veränderungen identifizieren. Personen, die in den Jahren 2017-2019 an der Nijmegen Exercise Study teilgenommen haben, wurden zu dieser Studie eingeladen, die zwischen dem 16. April und 12. Mai 2020 durchgeführt wurde. Die Teilnehmermerkmale (d. h. Alter, Geschlecht, Body-Mass-Index (BMI), Familienstand, Bildung, Haushaltszusammensetzung und Berufsstatus), das Lebensumfeld (d. h. Wohnform und Urbanisierungsgrad), psychologische Merkmale (d. h. Resilienz, Ergebniserwartungen, Vitalität und psychische Gesundheit) und die Krankengeschichte wurden über einen Online-Fragebogen erhoben. Der kurze Fragebogen zur Bewertung der gesundheitsfördernden körperlichen Aktivität wurde verwendet, um das PA-Verhalten vor und während des Lockdown zu bewerten. Mit dem Wilcoxon Signed-Rank-Test wurde das PA-Niveau in MET-Minuten pro Woche (min/wk) vor und während des Lockdown verglichen. Multivariable lineare Regressionsanalysen wurden durchgeführt, um die Korrelate der PA-Veränderungen zu untersuchen. 4033 Teilnehmer (57 % männlich; 59 ± 13 Jahre) wurden einbezogen. Die PA nahm während des Lockdown signifikant ab, mit mittleren ± SD-Änderungen von 393 ± 2735 MET-min/Woche für Gesamt-PA, 133 ± 785 MET-min/Woche für Transport, 137 ± 1469 MET-min/Woche für Beruf und 136 ± 1942 MET-min/Woche für Freizeit-PA. Die PA im Haushalt änderte sich nicht signifikant. Arbeitslosigkeit, COVID-19-bedingte berufliche Veränderungen, ein höherer BMI und das Leben in einer Wohnung oder einem Doppel-/Reihenhaus standen in signifikantem Zusammenhang mit einer stärkeren Abnahme der gesamten und bereichsspezifischen PA. Höhere Vitalität war mit einer geringeren Abnahme der gesamten und bereichsspezifischen PA verbunden. Ein höheres Alter stand in signifikantem Zusammenhang mit einem stärkeren Rückgang des PA in der Freizeit. Eine niedrigere Bildung war mit einer geringeren Abnahme der Verkehrs- und Berufs-PA verbunden als eine höhere Bildung. Das PA-Niveau sank während des Lockdown signifikant im Vergleich zu vor dem Lockdown. Rückgänge wurden bei Verkehr und Beruf beobachtet, konnten aber nicht durch eine Zunahme der Freizeit-PA kompensiert werden. Wir haben Untergruppen identifiziert, die anfälliger für eine Verringerung des bereichsspezifischen oder des gesamten PA-Niveaus sind und daher ermutigt werden sollten, ihr PA-Niveau während des Lockdown zu erhöhen.' 
-  tags:        [COVID-19, Lockdown, körperliche Aktivität]
+  tags:        [COVID-19, Lockdown, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.1186/s12889-022-12560-y
 ---
