--- a/_studies/2022-01-23-10.3390-jrfm15020051.md
+++ b/_studies/2022-01-23-10.3390-jrfm15020051.md
@@ -10,7 +10,7 @@ en:
 de:
   subtitle:    'COVID-19: Hindernisse für die körperliche Betätigung älterer Erwachsener, eine Verschlechterung der Gesundheit oder der Wirtschaftlichkeit?'
   description: 'Seit dem Frühjahr 2020 haben mehrere Regierungen als Reaktion auf die weltweite Bedrohung durch die Coronavirus-Pandemie 2019 (COVID-19) Notfallmaßnahmen und -vorschriften eingeführt, um eine weitere Übertragung der Krankheit zu verhindern. Soziale Distanzierung, Isolierung oder Abriegelung wurden beschlossen, um die Übertragung zu kontrollieren und die Bürger zu schützen. Diese Regelungen beinhalten in der Regel eine Einschränkung der Mobilität der Bürger und die Schließung von Aktivitätsorten. Obwohl die Maßnahmen die Kurve neuer Fälle abflachen und die Infektionsraten minimieren konnten, hatten die Beschränkungen auch erhebliche Auswirkungen auf die Gesundheit und das Wohlbefinden der Bürger, da die Hindernisse für körperliche Aktivität (PA) verstärkt wurden. Die Auswirkungen sind für gefährdete Bevölkerungsgruppen, insbesondere ältere Menschen, Menschen mit chronischen Erkrankungen und Menschen mit Bewegungsmangel, möglicherweise noch deutlicher und folgenreicher. Es ist erwiesen, dass ein Rückgang der körperlichen Betätigung das Risiko erhöht, Funktionseinschränkungen und Behinderungen im täglichen Leben, chronische Krankheiten wie Herz-Kreislauf-Erkrankungen, Fettleibigkeit, kognitiven Verfall, Demenz, Depressionen und eine höhere Gesamtsterblichkeitsrate zu entwickeln. Demgegenüber gibt es zahlreiche Vorteile für eine Verbesserung der körperlichen Aktivität, die in früheren Studien ausführlich beschrieben wurden. Das Ausmaß und die Beteiligung an körperlicher Aktivität stehen auch in Zusammenhang mit der Wirtschaft eines Landes, insbesondere im Hinblick auf die Gesundheitsversorgung und die Arzneimittelversorgung. Einem früheren Bericht aus Australien zufolge wurden fast 7 % der australischen Gesundheitsbelastung auf körperliche Inaktivität zurückgeführt, wobei ischämische Herzkrankheiten (51 %), Typ-2-Diabetes (20 %) und Schlaganfälle (14 %) die Hauptursachen waren. Diese Krankheiten treten in der Regel bei älteren Erwachsenen auf. Dies deutet darauf hin, dass ältere Menschen von COVID-19 stark betroffen wären, aber auch den größten Nutzen aus einem erhöhten PA-Niveau ziehen würden. Ein höheres Maß an körperlicher Aktivität würde zu einem geringeren Auftreten der Krankheit führen und einen Rückgang der künftigen wirtschaftlichen Nachfrage nach Gesundheitsversorgung und Medikamenten ermöglichen.' 
-  tags:        [COVID-19, Pandemie, körperliche Aktivität, ältere Erwachsene]
+  tags:        [COVID-19, Pandemie, ältere Erwachsene, Körperliche Aktivität]
 group:         'Interventions'
 credit:        https://doi.org/10.3390/jrfm15020051
 ---
